portfolio/PixelAgentOffice/v0.0.2/FEATURES.md
# 기능 명세서 — PixelAgentOffice

> PC에서 한 항목씩 체크하며 검증할 수 있는 테스트 체크리스트.
> 각 기능별 *무엇* / *사용 방법* / *기대 동작 ☐* / *알려진 한계* 정리.
> 새 기능 추가 시 즉시 갱신.
>
> 최종 갱신: 2026-06-24 (Day 14 §130 — **v0.0.2 준비**: 회고 → 버그픽스 **G-1 유령 직원**(무자리 직원 차단)·**G-2 일일 비용 상한**(이제 *실제 차단* — 디스크 영구화·재시작 우회 불가·**유료 Claude만 적용**, 무료 Gemini 제외) + **메모리 모드 셀렉터 숨김**(무동작이라) + **테스트 그물 복구**(vitest 유닛 24 + E2E 9). ⚠️ 일일 한도/강제 야간 테스트는 **유료 모델로** 해야 발동(무료 제외). 이전 §129 — **튜토리얼 재설계**: 존댓말 비서 **문 비서**(🐙) + 채용→대화→메모→상점→설정 **자동 연속** + **메모지·캔버스 트랙** 추가 + 최초 **메리 강제·폼 잠금** + 스크롤후포커스/정보팝업 스팟라이트 숨김 + 🛒·[버튼] 표기. 이전 §128 — **첫 사용자 온보딩 대공사**: 튜토리얼 가이드 투어(T1) + API 키 미니팝업/받는법 안내 + 키 없이 쓰는 **데모 대화 모드**(캐릭터별 더미) + **멀티트랙 튜토리얼**(메인=채용까지 / 상점·설정은 각 창 🎓) + 외부 링크 기본 브라우저 열기. Day 13 — 진급/칭찬/메모리 Phase 1~4)

---

## 📍 NAV — 빠른 메뉴

| 마일스톤 | 기능 묶음 |
|---|---|
| [M1](#m1--기본-사무실--캐릭터) | Phaser 픽셀 사무실 + Clawd 가족 |
| [M2](#m2--ui-모달-채널) | 채용·메모·설정 모달 + 영속화 |
| [M3](#m3--다중-llm) | Claude + Gemini provider |
| [M4](#m4--llm-안정성--chatpopup-정밀화) | RPM 차단, 에러 매핑, 사용량 시각화, 페르소나 자리비움 |
| [M5-a](#m5-a--시간대-시스템) | 5단계 시간대 자동 전환 |
| [M5-b](#m5-b--사무실-위계-16자리) | 사장 1 + 3팀 × 5명 + 직급 자격 |
| [B-3](#b-3--자리-이동-드래그앤드롭) | 우클릭 컨텍스트 + 드래그앤드롭 |
| [B-4](#b-4--책상-회전) | 책상 + 캐릭터 90° 회전 |
| [M5-c](#m5-c--토큰-보드) | 사장석 뒤 액자 LED |
| [B-5](#b-5--줌카메라) | 휠 줌 + 토글 버튼 |
| [Lv1 꾸미기](#lv1-사무실-꾸미기-d) | 화분·책장·자판기·시계 가구 |
| [명함 hover](#직원-명함-hover-카드-a) | 캐릭터 hover 시 정보 카드 |
| [빈자리 hint](#빈-자리-hover--채용-점프-b) | 빈 자리 hover + 클릭 채용 |
| [온보딩](#온보딩--빈-사무실-안내-c) | 첫 사용자 가이드 |
| [사용량 상세](#사용량-상세--설정-모달-e) | 모델별 분포 표 + RPM 막대 |
| [상태바](#동적-상태바-f) | 직원수·시간대·누적비용 라이브 표시 |
| [Day 10 폴리시](#사무실-layout-재구성-day-10) | layout 재구성 · 말풍선 5종 상태머신 · forcedNight · 눈 감기 · input 복구 |
| [Day 11 사무실/캐릭터](#팀-동적-중앙-정렬-day-11) | 팀 중앙정렬 · 팻말+이름수정 · 자리간격 · 말풍선 12종 · v2.5(비활성) |
| [Day 11 후속](#p2-25-가구-배치-드래그앤드롭-day-11-후속) | 가구 배치 · 채팅 영구화 · 빈자리 숨김 · 상점 미리보기 · 카메라 fix · 외형/hover 정리 |
| [Day 12 §1](#감정-자동-트리거-day-12-1) | 감정 자동 트리거 · idleEmotion · 가구 컨텍스트 메뉴/옮기기 · Portable EXE |
| [Day 12 §2](#빈-사무실-첫-실행-day-12-2--배포-빌드용) | 빈 사무실 시작 · GitHub Releases EXE 배포 |
| [Day 12 §3](#mbti-16종-페르소나-시스템-day-12-3) | MBTI 16종 페르소나 · 감정 미리보기 모달 · 말풍선 이모지 전환 · UX 9건 · timer fix |
| [Day 12 §3 +1](#알림-모달--빈-input-강조-day-12-3-1) | 알림 모달 · 빈 input 강조 · 기본 캐릭터 자동채움 · 🤖 Cody |
| [Day 13 Phase 1](#활동-카운터-연결-day-13--진급메모리칭찬-phase-1) | 활동 카운터 연결 (totalMessages / totalMemoryUpdates) |
| [Day 13 Phase 2](#칭찬--버튼-day-13--phase-2) | 칭찬 👍 버튼 (totalPraises + happy 반응) |
| [Day 13 Phase 3](#진급-시스템-day-13--phase-3-기준-재정의-반영) | 진급 시스템 (자격 판정 + 진급 요청 모달) |
| [Day 13 진급 배율](#진급-난이도-배율-day-13) | 설정에서 진급 속도 배율(0.5~3) 조정 |
| [Day 13 메모리](#직원-기억-메모리-시스템-day-13--phase-4) | 직원이 대화에서 사용자 정보 기억 → system prompt 주입 (반자동) |
| [Day 14 온보딩](#첫-사용자-온보딩-day-14) | 튜토리얼 가이드 투어(존댓말 비서 문 비서 · 채용→설정 자동 연속 · 메모·캔버스 트랙 · 메리 잠금) + API 키 미니팝업/안내 + 데모 대화 모드 |

---

## M1 — 기본 사무실 + 캐릭터

**무엇**: Electron + Phaser + React로 만든 픽셀 아트 사무실. 캐릭터(Clawd 가족)가 책상 앞에 앉아 있고 채팅창으로 대화.

**사용 방법**: `pnpm dev` → Electron 윈도우 자동 실행

**기대 동작**:
- ☐ 시작 시 사무실 배경(바닥·하늘·구름·태양) + 책상·의자·모니터 픽셀로 보임
- ☐ Clawd(주황) / Headphones(헤드폰) / Jellyfish(투명 파랑) 3 변형 캐릭터 시각 차이
- ☐ 캐릭터 idle bob 애니메이션 (위아래 미세 흔들림)
- ☐ 모니터 깜빡임 효과
- ☐ 구름이 좌→우로 천천히 이동
- ☐ 캐릭터 호버 시 살짝 확대

**알려진 한계**: 없음

---

## M2 — UI 모달 채널

**무엇**: 채용·메모·설정 3 모달 + electron-store 영속화

### 채용 모달 (HireModal)
**사용 방법**: 상단바 `+ 채용` 클릭

**기대 동작**:
- ☐ 모달 열림 + Mary(편집자) / Haewol(작가) 템플릿 선택 가능
- ☐ 이름·역할·이모지·기본 지침 편집 가능
- ☐ 모델·메모리 모델 선택 드롭다운
- ☐ 저장 시 즉시 사무실에 새 캐릭터 등장 (자동 자리 배치)
- ☐ 최대 인원(15) 도달 시 채용 버튼 disabled
- ☐ ESC 또는 외부 클릭으로 닫힘

### 메모 모달 (MemoModal)
**사용 방법**: 캐릭터 책상 옆 노란 메모지 클릭 또는 우클릭 → "📝 메모지 열기"

**기대 동작**:
- ☐ 직원의 `customInstructions` 편집 가능 (기본 지침은 readonly)
- ☐ 모델·메모리 모델 변경 가능
- ☐ "해고" 버튼 → 확인 후 직원 제거
- ☐ 저장 시 즉시 반영

### 설정 모달 (SettingsModal)
**사용 방법**: 상단바 `⚙` 클릭. 또는 사용량 칩/토글 우클릭 → 해당 섹션 자동 점프 (M4)

**기대 동작**:
- ☐ Anthropic / Google API 키 저장·삭제 가능 (마스킹 표시)
- ☐ 기본 모델 / 기본 메모리 모델 / 일일 한도 ($) / 사용량 표시 모드(chips/toggle) 변경
- ☐ 저장 시 즉시 반영

**알려진 한계**: API 키는 safeStorage(OS 키체인)에 저장 — Web/모바일 어댑터에선 다른 방식 (M3 Platform Adapter)

---

## M3 — 다중 LLM

**무엇**: Anthropic Claude + Google Gemini 둘 다 지원. 모델별로 직원 배정.

**사용 방법**: 채용·메모 모달에서 모델 선택. 설정 모달에서 API 키 입력.

**기대 동작**:
- ☐ 5종 모델 선택 가능: Claude Opus/Sonnet/Haiku, Gemini 2.5 Pro/Flash
- ☐ 모델 라벨 옆에 tier(`paid`/`free`) + RPM + 가격 표시
- ☐ 폐기된 모델 ID(`gemini-2-0-flash`)는 자동으로 `gemini-2-5-flash`로 마이그레이션
- ☐ Anthropic 키 없이 Gemini 모델만으로도 작동
- ☐ 모델별 사용량 분리 추적

**알려진 한계**: 두 provider 외 다른 모델 미지원 (Groq·OpenAI 등 P3+ 단계)

---

## M4 — LLM 안정성 + ChatPopup 정밀화

### Rate Limit 사전 차단
**사용 방법**: 모델 RPM 한도 근접 시 ChatPopup이 자동으로 차단·안내

**기대 동작**:
- ☐ Gemini Flash 분당 10회 / Pro 분당 5회 / Claude 50회 카운트
- ☐ 한도 도달 시 "잠시 후 다시 시도" 안내, 다음 회복 시각 표시
- ☐ 60초 sliding window — 오래된 요청 자동 만료

### 친절 에러 메시지
**사용 방법**: API 키 오류·네트워크 오류 등 발생 시 ChatPopup에 한글 안내

**기대 동작**:
- ☐ raw API URL이 사용자에게 노출되지 않음
- ☐ "API 키 잘못됐어요" 같은 한글 메시지로 안내
- ☐ 설정 모달로 점프하는 버튼 동작

### 채팅 중단 (AbortController)
**사용 방법**: 답변 생성 중 채팅창 닫기 또는 새 메시지 전송

**기대 동작**:
- ☐ 진행 중인 LLM 호출이 즉시 중단됨 (네트워크 abort)
- ☐ 중단된 응답은 화면에 표시 안 됨

### 페르소나 정체성
**사용 방법**: 직원에게 "너 누구야?" 같은 질문

**기대 동작**:
- ☐ "저는 Mary입니다" / "저는 Haewol입니다" 같이 페르소나 유지
- ☐ "저는 Claude입니다" 같은 모델 정체성 노출 없음 (system prompt 강화)

### 사용량 시각화 (chips / toggle)
**사용 방법**: 채팅창 모델 라벨 아래 칩 또는 사용량 버튼 클릭

**기대 동작**:
- ☐ `chips` 모드: 모델명 아래 RPM 칩 + 비용 칩 (호버 시 상세 툴팁)
- ☐ `toggle` 모드: 사용량 버튼 클릭 시 펼침 스트립
- ☐ 칩 우클릭 → "사용량 보기" / "표시 모드 변경" 컨텍스트 메뉴
- ☐ 컨텍스트 메뉴 클릭 시 설정 모달의 해당 섹션으로 점프

### 페르소나 자리비움 (14가지 랜덤 게임 상태 메시지)
**사용 방법**: 채팅창에서 답변 대기 중 또는 typing 상태

**기대 동작**:
- ☐ "☕ 커피 가지러 갔어요" / "🚽 화장실 갔어요" / "📩 상사 메시지 확인 중" 등 14가지 무작위 표시
- ☐ 일반 typing 인디케이터 대신 게임 분위기 살아있음

**알려진 한계**: 메시지 14개 고정. 사용자 추가 메시지 입력 UI 없음 (추후)

---

## M5-a — 시간대 시스템

**무엇**: 사용자 PC 시간에 따라 사무실 하늘·조명이 5단계 자동 전환. 토큰 고갈 시 강제 야간.

**사용 방법**: 자동 (별도 조작 없음). 시간대 라벨이 우측 상단에 표시.

**기대 동작**:
- ☐ 06-11시: 🌅 아침 (밝은 하늘)
- ☐ 11-15시: ☀️ 점심 (푸른 하늘)
- ☐ 15-18시: 🌇 노을 (오렌지 핑크)
- ☐ 18-21시: 🌆 저녁 (보라 어두운 파랑)
- ☐ 21-06시: 🌃 밤 (검은 하늘 + 별 깜빡임)
- ☐ 시간대 전환 시 1.5초 부드러운 색 보간 (구름·태양·별·하늘 모두 동시)
- ☐ 우측 상단 라벨이 현재 시간대 한글로 표시
- ☐ 강제 야간 모드 발동 시 라벨에 "(한도 도달)" 표기

**알려진 한계**: 사용자가 직접 시간대 토글하는 UI 없음 (자동만)

---

## M5-b — 사무실 위계 (16자리)

**무엇**: 사장 1 + 팀(최대 3, 기본 1) × 5명(리더 1 + 팀원 4). 직급(`알바`→`레전드`) 기반 자격 검증.

**Day 8 후속 P0 #7**: 팀원 1명 이상 있는 팀만 표시. 초기엔 팀 A만 보임 (팀 B/C는 직원이 그 팀에 있을 때만).

**사용 방법**: 채용 시 자동 배치. 자리 이동은 우클릭 → "🪑 자리 이동 (드래그)" (B-3 참조)

**기대 동작**:
- ☐ 화면 위쪽 중앙에 사장석 (👑 명패, yRatio 0.30으로 내려옴 — P0 #1), 빈 상태로 항상 표시
- ☐ 초기엔 **팀 A만 표시** (5자리 + 사장석 = 총 6자리)
- ☐ 팀 B/C는 그 팀에 직원이 있을 때만 (드래그로 이동하면 활성화)
- ☐ 활성 팀의 라벨만 보임 (예: 팀 A만 있으면 "— 팀 A —" 한 줄)
- ☐ 채용 시 빈 팀원 자리부터 자동 배치 (A→B→C 순)
- ☐ 과장 이상 직원은 비어있는 리더 자리에 자동 배치 (별 마크 ⭐)
- ☐ 리더 명패는 노란 배경 + 별 표시로 강조
- ☐ 빈 자리는 책상·의자·모니터가 옅게(alpha 0.55~0.6) 표시 — 보이지만 비어있음 명확

**알려진 한계**: 사장석은 *항상 비어있음* (M5-d 페르소나 시스템 확정 후 사용자가 채울 예정)

---

## B-3 — 자리 이동 (드래그앤드롭)

**무엇**: 직원을 우클릭 → 컨텍스트 메뉴 → 드래그앤드롭으로 빈 자리로 이동. 자격 검증.

**사용 방법**:
1. 캐릭터 위 또는 책상 영역에서 **우클릭**
2. 컨텍스트 메뉴에서 **"🪑 자리 이동 (드래그)"** 클릭
3. 캐릭터를 빈 자리로 드래그
4. 적합한 자리에서 놓으면 이동 / 부적합 자리는 빨강 깜빡 + 원위치

**기대 동작**:
- ☐ 캐릭터 정면(머리)에서 우클릭 → 메뉴 표시
- ☐ 캐릭터 *아래* 책상 영역(zone)에서 우클릭 → 메뉴 표시 (zone 확장 검증)
- ☐ 메뉴 열린 상태에서 다른 캐릭터 우클릭 → 메뉴가 새 캐릭터로 갱신
- ☐ "자리 이동" 클릭 → 캐릭터 alpha 약간 낮아지고(0.85) 살짝 커짐
- ☐ 빈 자리에 펄스 효과 (🟢 적합 / 🔴 자격 부족)
- ☐ 화면 상단 안내 텍스트: "🪑 빈 자리로 드래그하세요 · ESC: 취소"
- ☐ 드래그 중 캐릭터가 마우스 따라옴 (수직 이동도 자연스러움 — idle bob 일시 정지)
- ☐ 빈 자리 60px 이내에 드롭 → 그 자리 중앙으로 스냅 + DB 갱신
- ☐ 빈 자리 아닌 곳 또는 자격 부족 자리 → 원위치 복귀 (250ms tween)
- ☐ ESC 또는 외부 클릭 → 취소 + 원위치
- ☐ 자격 검증: 리더 자리는 과장 이상만 / 사장석은 사장 이상만
- ☐ 이동 후 캐릭터 외형(alpha) 복원, idle bob 재시작

**알려진 한계**: 사장석 이동은 현재 모든 직원에게 자격 부족 (사장 직급자 없음). 페르소나 시스템 도입 후 활성화 예정.

---

## B-4 — 책상 회전

**무엇**: 캐릭터의 책상을 정면/좌/우로 90° 회전. 캐릭터도 같이 회전 + 위치 이동.

**사용 방법**: 캐릭터 우클릭 → **"🔄 책상 회전"** 클릭 (한 번 누를 때마다 다음 방향)

**기대 동작 (Day 8 후속 P0 #4·#5 반영)**:
- ☐ 컨텍스트 메뉴에 "🔄 책상 회전" 항목 표시
- ☐ 클릭할 때마다 순환: `front → right → left → front`
- ☐ `right` (시계 +90°): 책상이 시계 방향 회전, 캐릭터가 책상 **왼쪽 옆**으로 이동 + 같이 회전
- ☐ `left` (반시계 -90°): 책상이 반시계 회전, 캐릭터가 책상 **오른쪽 옆**으로 이동 + 같이 회전
- ☐ 의자·모니터·메모(P0 #5: 책상 우측 상단)가 책상과 같이 회전 — **마우스 제거됨**, 책상 폭 40→24 축소
- ☐ 회전 시 말풍선도 책상 위 영역에 보이게 (P0 #4 — 회전 일 때 `deskY-60` 위치)
- ☐ 명패는 회전 없이 책상 아래 그대로
- ☐ 회전된 책상 옆에서 우클릭해도 컨텍스트 메뉴 정상 표시 (zone이 따라감)
- ☐ 회전된 자리에서 "자리 이동" 시작 → 캐릭터 베이스 좌표 정확히 잡힘
- ☐ 다른 자리로 이동해도 회전 상태 유지

**알려진 한계**:
- 캐릭터 픽셀이 좌우 대칭이라 90° 회전 후 *옆으로 누운 듯한* 시각 — 어색하면 추후 좌·우 픽셀 스프라이트 신규로 폴리시
- 책상 90° 회전 시 가로 40×세로 12였던 픽셀이 12×40 가늘게 보임

---

## M5-c — 토큰 보드

**무엇**: 사장석 뒤 벽에 액자 형태 LED 보드. 모든 모델 합산 비용 + 신호등 색으로 한도 위험도 표시.

**사용 방법**: 자동 (별도 조작 없음). 1초마다 갱신.

**기대 동작**:
- ☐ 화면 상단 중앙에 갈색 액자 프레임 + 안쪽 LED 디스플레이 (200×36px)
- ☐ LED 안 위쪽에 비용 라벨: `$0.05 / $5.00` 형식 (현재 누적 / 일일 한도)
- ☐ LED 안 아래쪽에 진행률 바 (검은 배경 + 색 채움)
- ☐ 누적 비용 < 60%: 🟢 LED 초록 + 라벨 초록 + 바 초록
- ☐ 누적 60~85%: 🟡 LED 노랑 + 라벨 노랑 + 바 노랑
- ☐ 누적 ≥ 85%: 🔴 LED 빨강 + 라벨 빨강 + 바 빨강 + **점멸 시작** (alpha 0.4↔1, 350ms 주기)
- ☐ 토큰 고갈로 강제 야간 모드 발동 시: 즉시 빨강 + 점멸
- ☐ 강제 야간 해제 시 색 자동 복원 + 점멸 종료
- ☐ 설정에서 `dailyLimitUsd` 변경 시 즉시 보드 갱신
- ☐ 채팅으로 비용이 누적되면 1초 내에 라벨·바 갱신

**알려진 한계**:
- 누적 비용은 *세션* 기준 (앱 재시작 시 0으로 리셋) — 일일 영구화는 별도 작업
- 클릭 인터랙션 없음 — 상세 사용량은 설정 모달에서 확인
- 색감·위치·크기는 시각 검증 후 미세 조정 가능

---

## B-5 — 줌·카메라

**무엇**: 마우스 휠 줌(0.7x ~ 1.6x) + 좌상단 토글 버튼(1.0x ↔ 1.4x). 사무실 디테일 확대 보기.

**사용 방법**:
1. **휠**: 마우스 커서를 보고 싶은 영역 위에 두고 휠을 *위로* 굴리면 줌인, *아래로* 굴리면 줌아웃
2. **토글 버튼**: 캔버스 좌상단 `🔎+` 버튼 클릭 → 1.4x 줌인, 다시 클릭 → 1.0x 복귀

**기대 동작**:
- ☐ 휠 위로 → 줌인 (현재 줌 × 1.1)
- ☐ 휠 아래로 → 줌아웃 (현재 줌 × 0.9)
- ☐ 줌 한계 0.7x ~ 1.6x (그 이상은 클램프됨)
- ☐ 마우스 포인터가 가리킨 *그 지점*이 줌 후에도 같은 화면 위치에 머무름 (카메라 중심 동시 조정)
- ☐ 좌상단 floating 버튼 표시 + 호버 시 살짝 확대
- ☐ 버튼 클릭 → 1.0x ↔ 1.4x 300ms 부드러운 트랜지션
- ☐ 토글 상태에 따라 아이콘 `🔎+` ↔ `🔎−` 전환
- ☐ 줌 상태에서 캐릭터 우클릭·자리 이동 드래그 등 다른 기능 정상 작동
- ☐ 휠로 1.1x 이상으로 올렸을 때 토글 상태가 "줌인 됨"으로 동기화

**알려진 한계**:
- 토큰 보드·title·subtitle 등 UI도 같이 줌됨 — 1.6x 줌인 시 일부 UI가 화면 밖으로 잘릴 수 있음. 어색하면 UI 분리(별도 카메라) 추후 작업
- 모바일 핀치 줌 미구현 — P5 모바일 빌드 단계에 추가 예정
- 줌 상태가 영속화되지 않음 (앱 재시작 시 1.0x로)

---

## Lv1 사무실 꾸미기 (D)

**무엇**: 사무실 분위기 살리는 정적 가구 4종. 사용자 조작 없음, 시각 디테일만.

**사용 방법**: 자동 (조작 없음)

**기대 동작**:
- ☐ 좌하 + 우하 코너에 **화분** (잎 초록 + 하이라이트 + 갈색 화분)
- ☐ 좌측 벽 중간에 **책장** (다양한 색 책 픽셀, 3단)
- ☐ 우측 벽 중간에 **자판기** (검은 화면 + 음료 라벨 R/B/Y + 패널 버튼 + 받침대)
- ☐ 좌측 벽 상단에 **시계** (둥근 외곽 + 시침·분침 픽셀)
- ☐ 가구가 자리/캐릭터/책상/메모와 겹치지 않음
- ☐ 가구가 토큰 보드와 분리됨
- ☐ 줌인/아웃 시 가구도 같이 줌 (게임 세계의 일부)

**알려진 한계**:
- 가구 위치·크기는 시각 검증 후 미세 조정 가능
- 시계 시침/분침은 실제 시간과 무관 (고정 픽셀, 장식만)
- 시간대 색 변화는 가구에 영향 없음 (시간대 시스템은 하늘·구름·태양만 영향)

---

## 직원 명함 hover 카드 (A)

**무엇**: 캐릭터 위에 마우스 올리면 정보 카드 popup. 이름·직급·역할·모델 한눈에.

**사용 방법**: 캐릭터에 마우스 hover (클릭 X)

**기대 동작**:
- ☐ 캐릭터 위 마우스 올리면 카드 등장 (마우스 우하단 +20px offset)
- ☐ 카드 내용: 이모지 + 이름 (큰 글자, 갈색 강조 하단 구분선)
- ☐ 직급 행: 리더 자리 직원은 ⭐ 마크 prefix
- ☐ 역할 + 모델(label) 표시
- ☐ 마우스 움직이면 카드도 따라 이동
- ☐ 마우스가 캐릭터 떠나면 카드 즉시 닫힘
- ☐ 카드는 클릭 안 됨 (`pointer-events: none`) — 클릭은 캐릭터에게 전달
- ☐ 회전된 책상의 캐릭터에도 정상 작동 (좌·우 옆에 있어도)

**알려진 한계**:
- 직원별 메시지 수·비용은 영구화되지 않음 — 현재 모델 label만 표시
- 카드 위치가 화면 우하단에 가까울 때 화면 밖으로 잘릴 수 있음 (clip 처리 없음)

---

## 빈 자리 hover tooltip (B → P0 #2 / #6)

**무엇**: 빈 책상 영역에 마우스 올리면 DOM tooltip(작게, 마우스 옆)으로 "빈 자리 — [자리 라벨]" 표시.

**Day 8 후속 P0 변경**:
- ❌ 클릭으로 채용 모달 열기 제거 (사용자 요청: 채용은 우상단 + 채용 버튼만)
- 큰 Phaser 텍스트 박스 → 작은 DOM tooltip (윗자리 명패와 안 겹침)
- 이동 모드 진입 시 hover zone disable (P0 #3 — 회전 + 자리이동 충돌 회피)

**사용 방법**:
- 빈 자리에 마우스 hover → tooltip 표시. 클릭은 무동작.

**기대 동작 (P0 후)**:
- ☐ 빈 자리 hover 시 마우스 우하단에 작은 갈색 DOM tooltip "빈 자리 — [자리 라벨]"
- ☐ 마우스 움직이면 tooltip 따라옴
- ☐ 마우스 떠나면 tooltip 즉시 사라짐
- ☐ 빈 자리 클릭은 무동작 (채용은 우상단 버튼만)
- ☐ 자리 이동 모드 진입 시 hover zone 비활성화 (회전된 자리에서 드래그 시 tooltip·채용 충돌 X)
- ☐ 사장석은 빈 자리지만 tooltip *없음* (페르소나 결정 후)

**알려진 한계**:
- 평소에도 빈 자리 자체가 옅게 보임 (alpha 0.55) — P1 단계에서 *채용 모드 진입 시에만* 표시로 변경 예정

---

## 온보딩 — 빈 사무실 안내 (C)

**무엇**: 직원 0명일 때 화면 중앙에 가이드 박스 + 채용 버튼 펄스 강조.

**사용 방법**: 자동 (조건부 — 직원 0명 + 로딩 완료 시 표시)

**기대 동작**:
- ☐ 첫 실행 시 채용 모달 닫힌 상태에서 화면 중앙에 가이드 박스 표시
- ☐ 박스 내용: 🏢 큰 이모지 + "사무실이 비어있어요" 타이틀 + "+ 채용 버튼으로 첫 직원을 만나보세요"
- ☐ 박스 뒤 반투명 배경 (사무실 가구·자리는 흐릿하게 보임)
- ❌ `+ 채용` 버튼 펄스 제거 (P0 #6 — 사용자 요청)
- ☐ 박스 자체는 클릭이 통과 (pointer-events: none) — 뒤 캔버스의 빈 자리 클릭 가능
- ☐ 첫 직원 채용 완료 후 박스·펄스 모두 자동 사라짐
- ☐ 모든 직원 해고 후 다시 0명이 되면 박스·펄스 재등장

**알려진 한계**:
- 박스가 사무실 일부 가구를 시각적으로 가릴 수 있음 — 반투명 배경(`alpha 0.4`)으로 완화
- ESC 키로 박스 닫기 기능 없음 (의도적 — 채용 유도 목적)

---

## 사용량 상세 — 설정 모달 (E)

**무엇**: 설정 모달의 `📈 모델별 사용량 (이번 세션)` 섹션. 모델별 요청 수·토큰·비용 표 + RPM 막대.

**사용 방법**:
1. 상단바 `⚙` 설정 클릭, 또는
2. 상태바의 누적 비용(`💰 $X.XX / $Y.YY`) 클릭 → 자동으로 이 섹션으로 점프 + 강조

**기대 동작**:
- ☐ 설정 모달 안 "📈 모델별 사용량" 섹션 표시
- ☐ 5개 모델 한 행씩 (Gemini Flash/Pro, Claude Haiku/Sonnet/Opus)
- ☐ 컬럼: 모델(라벨 + 유료/무료 chip) / 요청 / 입력 토큰 / 출력 토큰 / 비용 ($) / RPM 막대
- ☐ RPM 막대 길이는 모델별 한도 대비 비율 (예: 5/10 → 50%)
- ☐ 막대 색: 🟢 < 60% / 🟡 60~85% / 🔴 ≥ 85%
- ☐ 막대 옆 텍스트: `used/limit` 형식 (예: "3/10")
- ☐ 1초마다 자동 갱신 (polling — 모달 열린 동안만)
- ☐ 표 아래 합계: `💰 세션 누적 총 비용: $X.XXXX / 한도 $Y.YY`
- ☐ 상태바에서 클릭하면 이 섹션으로 자동 스크롤 + 1~2초 노란 강조
- ☐ 모달 닫으면 polling 중단

**알려진 한계**:
- 세션 기반 (앱 재시작 시 0으로 리셋) — 일일 영구화 별도 작업
- 모델별 일일 비용 한도가 없음 (RPM만) — 막대는 RPM 비율만 표현

---

## 동적 상태바 (F)

**무엇**: 화면 하단 footer가 라이브 정보로 갱신. 직원 수 / 시간대 / 누적 비용 한눈에.

**사용 방법**: 자동 (조작 없음, 1초마다 갱신)

**기대 동작**:
- ☐ 좌측: `● M5 Build` (초록색)
- ☐ 좌측 다음: `👥 [직원 수] / [최대 인원]` (예: "👥 4 / 15")
- ☐ 중앙: `🕐 [시간대 라벨]` (예: "🕐 아침")
- ☐ 강제 야간 모드 시 시간대 옆에 "(한도 도달)" 추가
- ☐ 우측: `💰 $X.XXXX / $Y.YY` 누적 비용 / 일일 한도
- ☐ 누적 비용 색: 🟢 초록 (< 60%) / 🟡 노랑 (60~85%) / 🔴 빨강 (≥ 85%)
- ☐ 빨강 상태일 때 깜빡임 효과 (0.7s 주기)
- ☐ 누적 비용 영역 hover 시 살짝 강조 (배경) + 클릭 시 설정 모달 사용량 상세 섹션으로 점프
- ☐ 직원 채용/해고 즉시 직원 수 갱신
- ☐ 시간대 자동 전환 시 라벨 갱신 (M5-a 1.5초 트랜지션과 동기)
- ☐ 토큰 보드(M5-c) 색과 상태바 비용 색이 항상 일치

**알려진 한계**:
- 활성 채팅 수 같은 정보는 미포함 (필요 시 추후 확장)
- 폭이 좁은 창에서 항목이 줄바꿈될 수 있음 (모바일 빌드 시 검토)

---

## 사무실 layout 재구성 (Day 10)

### 무엇
사용자 PC 시각 검증 피드백 → layout 단순화:
- 상단 띠·title·subtitle Phaser 객체 모두 제거 (OS 윈도우 타이틀 + footer 대체)
- 창문(skyBand y=0~32) + skyDivider(y=32~36) + 벽 띠(y=36~96) **직접 연결** (사이 빈 공간 X)
- 사장실 좌우/위 파티션 + 팀 사이 파티션 *모두 제거* (`drawTeamPartitions` 함수 삭제)
- 토큰 보드 / 시계 / timeLabel 위치 벽 띠(y=36~96) 안으로 재배치 (시계 절대 y=66, 토큰 보드 y=66, timeLabel y=46)
- footer 상태바에 `💬 말풍선 = 채팅 · 📝 메모 = 설정` 안내 추가

### 사용 방법
- 정보 / 행동 없음 — 기본 사무실 상태

### 기대 동작 ☐
- ☐ 창문(skyBand)에 풍경(산·건물·구름·태양) 그대로
- ☐ skyDivider 얇은 갈색 줄
- ☐ 벽 띠(베이지) 즉시 아래로 이어짐 — *빈 공간 없음*
- ☐ 벽 띠 안: 좌측 시계 / 가운데 토큰 보드 / 우측 시간대 라벨 + 줌 토글
- ☐ 파티션 *0개* (사장실·팀 사이 세로 막대 X)
- ☐ footer에 "💬 말풍선 = 채팅 · 📝 메모 = 설정" 안내 보임
- ☐ Phaser 안에 "PixelAgentOffice" 텍스트 *없음* (OS 윈도우 타이틀에만)

### 알려진 한계
- subtitle 제거로 첫 사용자에게 *말풍선/메모 기능 안내*는 footer만 의존

---

## 말풍선 5 emotion 상태 머신 (Day 10)

### 무엇
캐릭터 머리 위 말풍선(`chatBubble` 픽셀 9×9 PIXEL_SIZE 3)의 *안 5×5 픽셀 심볼*이 상황별로 변경:

| emotion | 픽셀 | 트리거 | 지속 |
|---|---|---|---|
| **thinking** (···) | 점 3개 | 평소 / working | 영구 (기본) |
| **happy** (◡◡) | 휘어진 눈 | LLM 응답 도착 (`agent:reply`) | 2초 → thinking |
| **confused** (?) | 물음표 | LLM 에러 (`agent:error`) | 4초 → thinking |
| **sleepy** (Z) | 누운 Z | 강제 야간 (한도 도달) | 한도 해제까지 |
| **surprised** (!!) | 두 직선 | 트리거 없음 (예약) | — |

`workingBubble`은 `chatBubble`의 *자식*이라 말풍선 트윈(yoyo)에 자동 동기화. `setBubbleEmotion(employeeId, emotion, expireMs)` 헬퍼로 변경.

### 사용 방법
- 채팅 메시지 보내기 → 응답 대기 중 `...` (thinking)
- 응답 도착 → 잠깐 `◡◡` → 2초 후 `...` 복귀
- 의도적으로 에러 만들기 (API 키 무효 등) → `?` 4초
- 일일 한도 매우 낮게 ($0.01) 설정 후 채팅 → 한도 도달 → `Z` 영구

### 기대 동작 ☐
- ☐ 평소 모든 캐릭터 말풍선 안에 `...` 점 3개
- ☐ 채팅 응답 후 잠시 `◡◡` 얼굴 (happy)
- ☐ 채팅 에러 시 `?` (confused) 4초
- ☐ 한도 도달 시 모든 캐릭터 `Z` (sleepy)
- ☐ 말풍선이 yoyo 트윈으로 위아래 움직일 때 *안 픽셀도 같이 움직임*

### 알려진 한계
- surprised 트리거 미정 (디자인 결정 보류)
- emotion 변경 시 destroy + recreate (작은 객체라 부하 미미)

---

## forcedNight 사무실 overlay (Day 10)

### 무엇
토큰 한도 도달 시 사무실 *안*만 어두워짐 — 창문은 실제 시간대 유지:
- `resolveTimeOfDay` 에서 `forcedNight` 분기 *제거* (실제 시간만 반환)
- `forcedNightOverlay` rectangle (y=96~height, color 0x0a1020 alpha 0.55, depth 17)
- uiCamera ignore → main 카메라만 영향
- chatBubble(depth 19) > overlay(17) → 말풍선·emotion은 밝게
- nameplate(depth 15) < overlay → 같이 어두워짐

### 사용 방법
- 설정 모달 → 일일 한도 $0.01 → 채팅 1~2번 → 한도 도달 트리거

### 기대 동작 ☐
- ☐ 창문 영역(skyBand·skyDivider·풍경) **실제 시간대 색 그대로** (낮이면 환함)
- ☐ 사무실 영역(y=96~)만 *반투명 어두움* 덮임
- ☐ 캐릭터 + 책상 + 가구 + 자리 + 이름표 모두 살짝 어둡게
- ☐ chatBubble + 안 emotion 픽셀은 밝게 (오버레이 위에 렌더)
- ☐ 토큰 보드 LED 빨강 + 점멸
- ☐ timeLabel "(한도 도달)" 추가
- ☐ 한도 해제 → overlay 사라짐, 평상 모드 복귀

### 알려진 한계
- 시각 검증 일부 완료 (한도 트리거는 사용자 확인). 일반망에서 채팅 정상 작동 후 더 자세히 검증 필요

---

## 캐릭터 눈 감기 (Day 10) — ⚠️ 검증 대기

### 무엇
sleepy 상태일 때 캐릭터 *기존 눈 픽셀 hide* + 그 자리에 *가로 선* 표시:
- `Clawd.ts createClawd`: 픽셀 그릴 때 `X` (basic/headphones/custom) 또는 `Y` (jellyfish) 색이면 `rect.setData('eye', true)` 마커
- `OfficeScene.setEyesSleepy(ws, sleepy)`:
  - sleepy=true → clawd 자식 중 eye marker visible(false) + 가로 선 visible(true)
  - sleepy=false → 반대
- 무늬(점박이/줄무늬/그라데이션) 영향 0 (눈은 베이스 char 아님 → 무늬 적용 전 색 그대로)

### 사용 방법
- 일일 한도 도달 트리거 → 모든 캐릭터 눈 감음 + 말풍선 Z

### 기대 동작 ☐
- ☐ 한도 도달 시 모든 캐릭터의 *X X 눈 픽셀 사라짐*
- ☐ 그 자리에 *짧은 가로 검정 줄* 두 개 (감은 눈)
- ☐ 한도 해제 시 가로 줄 사라지고 *원래 X X 눈 복원*
- ☐ 커스텀 캐릭터(점박이/줄무늬/그라데이션)도 동일 작동
- ☐ 터미널 콘솔에 `[setEyes] {이름} sleepy: true eyesFound: 4 totalChildren: 144` 로그

### 검증 절차 (다음 세션 우선)
1. Electron 창 X 버튼 닫기
2. 터미널 `Ctrl+C`
3. `Remove-Item dist-electron -Recurse -Force` (캐시 강제 삭제)
4. `pnpm dev`
5. 채용 + 한도 도달 → 위 ☐ 모두 확인
6. 작동 OK → `setEyesSleepy` 안의 console.log 5줄 제거

### 알려진 한계
- 현재 main process 캐시로 미반영 의심 (위 절차로 강제 새 빌드 필요)
- 측면 회전(left/right) 캐릭터 눈 위치는 정면 기준이라 어긋날 수 있음 — 추후 확인

---

## 에러 시 채팅 input 복구 (Day 10)

### 무엇
LLM 응답 실패(`result.ok === false`) 또는 catch 블록 진입 시 `setInput(text)` 호출로 *방금 보낸 메시지를 input에 복구*. 매번 다시 타이핑 안 하게.

### 사용 방법
- 회사망에서 SSL 이슈 / Gemini 503 / 가드 거부 등 LLM 에러 발생 시 자동

### 기대 동작 ☐
- ☐ 채팅 전송 후 에러 시스템 메시지 떠도 *input 영역에 방금 친 메시지 그대로 있음*
- ☐ Enter 다시 누르면 재전송 가능
- ☐ 성공 시는 input 비어 있음 (정상)

### 알려진 한계
- 응답 일부만 도착 후 끊긴 경우(streaming)는 입력 복구 X (현재는 비스트리밍이라 무관)

---

## 🧪 회귀 테스트 — E2E (Playwright)

PC에서 `pnpm test:e2e` 실행 시 자동 검증되는 시나리오:

| 파일 | 시나리오 수 | 검증 대상 |
|---|---|---|
| `01-launch.spec.ts` | 1 | Electron 윈도우 정상 띄움 + Title 검증 |
| `02-api-key.spec.ts` | ? | API 키 저장·삭제·마스킹 |
| `03-gemini-chat.spec.ts` | ? | Gemini 채팅 기본 응답 |
| `04-right-click-context-menu.spec.ts` | 4 | 우클릭 컨텍스트 + zone 확장 (B-3) |
| `05-desk-rotation.spec.ts` | 3 | 책상 회전 + 회전 후 zone (B-4) |

토큰 보드(M5-c) / 줌(B-5) E2E는 시각 디테일이라 추후 추가 검토.

---

## 📝 사용자 검증 워크플로우 (내일 PC 테스트 목록)

PC에서 다음 순서로 빠른 검증:

### 0. 기본 셋업
1. `git pull` → `pnpm install` (필요 시) → `pnpm dev`

### 1. 첫 인상 (빈 사무실 상태)
2. **온보딩 (C)**: 직원 0명 상태에서 화면 중앙 가이드 박스 + 상단 `+ 채용` 노랑 펄스
3. **Lv1 꾸미기 (D)**: 좌우 코너 화분 / 좌측 책장 + 시계 / 우측 자판기 픽셀 가구 보이는지
4. **M5-c 토큰 보드**: 사장석 뒤 액자 LED — 🟢 초록 + `$0.00 / $5.00`
5. **F 동적 상태바**: 하단 footer에 `● M5 Build · 👥 0/15 · 🕐 [시간대]` + 우측 `💰 $0.0000 / $5.00` 초록색
6. **빈자리 hint (B)**: 빈 책상 hover → "👤 [자리라벨] 채용" 안내 표시
7. 빈 자리 클릭 → 채용 모달 열림

### 2. 채용 후 인터랙션
8. 채용 1~2명 진행 → **온보딩 박스/펄스 자동 사라짐**, statusbar 직원 수 갱신
9. **명함 카드 (A)**: 캐릭터에 마우스 hover → 마우스 우하단에 정보 카드 (이름·직급·역할·모델). 리더는 ⭐
10. **B-5 줌**: 휠 위/아래로 부드러운 줌 변화 (0.7x~1.6x). 좌상단 🔎+ 클릭 → 1.4x 트랜지션
11. **B-4 책상 회전**: 캐릭터 우클릭 → "🔄 책상 회전" 3번 클릭 → front 복귀
12. **B-3 자리 이동**: 우클릭 → "🪑 자리 이동" → 빈 자리 드래그 (ESC 취소 / 자격 부족 자리 빨강 깜빡)

### 3. 채팅 + 사용량 (LLM 호출 필요)
13. 캐릭터 더블클릭 또는 채팅 말풍선 클릭 → ChatPopup 열림
14. 한두 번 메시지 전송 → 응답 받음 (Gemini Flash 기준)
15. **F 상태바 누적 비용 변화**: 메시지 보낼 때마다 `💰 $X.XXXX` 증가
16. **M5-c 토큰 보드 변화**: 비용에 따라 LED 색이 🟢→🟡→🔴 변화
17. **E 사용량 상세**:
    - 상태바 `💰` 영역 클릭 → 설정 모달 열림 + 사용량 섹션 자동 점프 + 1~2초 노란 강조
    - 표에 5개 모델 행 — 요청 수·토큰·비용·RPM 막대 갱신
    - 사용한 모델의 RPM 막대가 늘어남
18. ChatPopup의 페르소나 자리비움 메시지 (☕ 커피 / 🚽 화장실 등 14가지) — 응답 대기 중 확인

### 4. 시간대 & 야간 모드
19. 시간대(M5-a): 시스템 시계 임시 조정 → 시간대 자동 전환 (1.5초 보간) + statusbar 라벨 갱신
20. 일일 한도($)를 매우 낮게(예: $0.01) 설정 → **유료(Claude) 모델로** 채팅 → 한도 초과 시 **전송 자동 차단(DAILY_LIMIT) + 강제 야간 트리거** (G-2). ※ 무료 Gemini는 한도 미적용(차단 안 됨). ※ 누적 비용은 재시작해도 유지(자정 리셋).
    - 사무실 어두워짐 (5단계 야간 팔레트)
    - 토큰 보드 LED 빨강 + 점멸
    - 상태바 비용 빨강 + 깜빡임
    - 시간대 라벨에 "(한도 도달)" 추가

### 5. 회귀 — E2E 테스트
21. `pnpm test:e2e` → 5개 spec 통과 확인 (`01-launch`, `02-api-key`, `03-gemini-chat`, `04-right-click-context-menu`, `05-desk-rotation`)

### ✅ 이상하면 보고할 것
- 가구·토큰 보드 위치가 자리와 겹치거나 잘리면 → 좌표 미세 조정 필요
- 책상 회전 시 캐릭터가 누운 듯 어색하면 → 옵션 B (좌·우 스프라이트 신규)로 폴리시 결정
- 상태바 폭이 좁아서 항목 잘리면 → CSS 줄임 처리 추가

---

## 팀 동적 중앙 정렬 (Day 11)

### 무엇
활성 팀 수에 따라 자리·라벨 baseX 자동 조정:
- 1팀: 중앙 (0.50)
- 2팀: 양옆 (0.32 / 0.68)
- 3팀: 기존 (0.20·0.50·0.80)

`seats.ts`에 `getDynamicSeatX`·`getDynamicTeamX` 함수 export. 사장석은 항상 0.5 고정.

### 기대 동작 ☐
- ☐ 팀 A 하나만 활성 → 화면 중앙
- ☐ 새 팀 추가 (B 자리에 채용) → 양옆으로 분리
- ☐ 3팀 모두 활성 → 좌·중·우 (기존)
- ☐ 자리 이동(드래그·드롭·스냅·blocked flash)도 동적 좌표 반영

---

## 팻말 시각화 + 3종 스타일 + 이름 수정 모달 (Day 11)

### 무엇
팀 라벨이 단순 텍스트 → *팻말* 형태로 변경. 3종 스타일 카탈로그:
- **wood**: 갈색 + 바닥 박힌 기둥 2개 + 모서리 못 + 우측 위 새싹
- **hanging**: 위 수평 바 + 양옆 짧은 줄 + 막대 양 끝 사슬 고리
- **stone**: 회색 돌받침대 + 양 옆 풀잎

상점 (🛍) 모달의 *🪧 팀 팻말 디자인* 섹션에서 즉시 변경. `Settings.teamPlateStyle?: 'wood' | 'hanging' | 'stone'`로 저장.

### 사용 방법
- 팻말 **우클릭** → 컨텍스트 메뉴 → *✏️ 이름 수정* → inline 모달 (input + Enter / 저장 / 취소)
- 상점 → *🪧 팀 팻말 디자인* → 카드 *적용* → 즉시 시각 변경

### 기대 동작 ☐
- ☐ 팻말이 wood 디자인으로 보임 (기본) — 갈색 + 모서리 못 + 새싹
- ☐ 상점에서 hanging 적용 → 즉시 매달림 팻말로
- ☐ stone 적용 → 회색 돌 + 풀잎
- ☐ 팻말 우클릭 → 메뉴 + "✏️ 이름 수정" 클릭 → 모달 떠서 입력 가능
- ☐ 모달에서 Enter / 저장 → 새 이름 즉시 반영 + electron-store 영구 저장
- ☐ 강제 야간 시 팻말도 같이 어두워짐 (depth 15, overlay 17 아래)

### 알려진 한계
- Electron 기본 `window.prompt` 비활성이라 custom 모달로 대체
- 팀 라벨이 *현재 1개 스타일 = 모든 팀 동일*. 팀별 다른 스타일은 추후 확장

---

## 자리 간격 조정 + 명패·라벨 야간 어두움 (Day 11)

### 무엇
- 멤버 dy 0.15 → 0.20 (자리 세로 간격 +33%) — 위 명패 + 아래 말풍선 겹침 해소
- 명패 위치 `deskY+38` → `deskY+28` (책상에 더 가까이)
- 팀 라벨 labelY 0.85 → 0.93 (멤버 좌하 자리와 안 겹치게)
- 명패·팀 라벨·사장석 plate **depth 20→15** (overlay 17 아래 — 강제 야간 시 같이 어두워짐)

### 기대 동작 ☐
- ☐ 위 자리 명패가 아래 자리 말풍선과 *겹치지 않음*
- ☐ 팀 라벨이 멤버 좌하 자리와 *겹치지 않음*
- ☐ 강제 야간 시 명패·팀 라벨·사장석 plate 모두 *어두워짐* (chatBubble·emotion만 밝게)

---

## 말풍선 emotion 5종 → 12종 + 상점 미리보기 갤러리 (Day 11 v2.5 A)

### 무엇
말풍선 안 픽셀 5종 → **12종**:
- 기존: thinking / happy / surprised / sleepy / confused
- 신규: idea (💡) / love (♥) / angry (×) / sad (💧) / sweat (💦) / music (♪) / wow (✨)

상점 → *🎭 감정 표현 미리보기 (12종)* 갤러리 카드 클릭 → 모든 직원 5초간 적용 → 자동 thinking 복귀.

### 기대 동작 ☐
- ☐ 상점 갤러리에 12 emotion 카드 다 보임
- ☐ 각 카드 클릭 → 모든 직원 말풍선 안 픽셀 변경
- ☐ 5초 후 자동 thinking 복귀
- ☐ 새 7종 (idea/love/angry/sad/sweat/music/wow) 픽셀 *알아볼 수 있음* (작아도)

### 알려진 한계
- 5×5 그리드라 픽셀 디테일 한계 — 일부는 식별 어려움
- 트리거 매핑 미정 — 채팅 흐름별 자동 적용은 다음 단계

---

## v2.5 액세서리·책상 소품·눈 표정 (Day 11 — 코드 유지, 시각 비활성화) ⚠️

### 무엇
구현은 완료했으나 *그리드 사이즈 한계로 시각 비활성화*:

- **액세서리** (`Employee.accessoryId`): glasses / sunglasses / cap — 캐릭터 머리 위 overlay
- **책상 소품** (`Employee.deskItem`): mug / plant / laptop — 책상 좌측 작은 픽셀
- **눈 표정** 5종: closed (sleepy) / happy / love (♥) / surprised (큰 눈) / star (★) — emotion 자동 동기

### 현재 상태
- 코드 모두 유지 (`@ts-expect-error unused` 마커 + `if (false)` 또는 주석)
- ShopModal *👓 액세서리·소품* 섹션 `{false && (<>...</>)}` 로 hide
- `setBubbleEmotion` 안의 `setEyesByExpression` 호출은 *closed/normal만* 분기 (다른 overlay 안 그림)
- `closed` (sleepy) 시 눈 감기는 *그대로 작동* (Day 10 기능)

### Day 11 후속 — 그리드 확대 시도 2번 실패 → PNG asset 대기
- 시도 1: 16×14 cells (32×28 px) → "너무 못생겻어"
- 시도 2: 32×24 cells + 가구 PIXEL_SIZE 3 (64×48 px) → "너무 못생겻다"
- `git restore`로 `449fdbf` 시점 완전 원복. 12×12 PIXEL_SIZE 2로 복귀
- **결론**: Claude 픽셀 그리드 문자열 디자인 한계 — 단순 마스코트 이상은 PNG asset 필수

### 활성화 절차 (사용자 PNG 도입 후)
1. 사용자가 Aseprite/Piskel로 PNG 6종 (basic·headphones·jellyfish·custom + 액세서리·소품·눈 표정) 그림
2. Phaser preload에서 PNG load + spritesheet animation
3. Clawd.ts pixel 그리드를 PNG sprite로 교체
4. Clawd.ts accessory `if` 주석 해제 + OfficeScene deskItem `if` 주석 해제 + ShopModal `{false &&}` 해제 + setBubbleEmotion 분기 제거
5. 시각 검증

---

## P2 #25 가구 배치 드래그앤드롭 (Day 11 후속)

### 무엇
사무실 꾸미기 핵심 미구현 기능 — 상점에서 산 가구를 사무실에 자유 배치. 8종 가구 활성화.

- 데이터 모델: `Settings.placedFurniture: PlacedFurniture[]` — uid / itemId / xRatio / yRatio
- 8종 가구: 화분(대형) / 책장 / 자판기 (기존 3종) + 소파 / 캘린더 / 액자 / 휴지통 / 테이블 (신규 5종, 단순 픽셀)
- Phaser native draggable로 자유 좌표 이동, 우클릭으로 제거
- 영속 저장 — 앱 재시작 후도 위치·배치 유지

### 사용 방법
1. 상점 🛍 버튼 → "🪑 가구·꾸미기" 섹션
2. 가구 아이템의 "🏢 사무실에 추가" 클릭 → 화면 중앙 (0.5, 0.5)에 배치
3. 가구 위에 마우스 hover → cursor `grab` → 드래그로 이동 → release 시 위치 저장
4. 가구 위에서 우클릭 → 제거

### 기대 동작 ☐
- [ ] 상점에서 8종 (plant-large / bookshelf-tall / vending-soda / sofa / calendar / frame / trash-can / lounge-table)에 "사무실에 추가" 버튼 활성화
- [ ] 나머지 4종 (coffee-machine / plant-corner / desk-lamp-extra / partition-extra)은 "곧 구매 가능" disabled
- [ ] 추가 클릭 시 화면 중앙에 가구 등장
- [ ] 드래그 중 alpha 0.7로 흐려짐, dragend 후 알파 1 복귀
- [ ] 우클릭 → 즉시 제거
- [ ] 가구가 사무실 영역 안에서만 움직임 (xRatio/yRatio 0.02~0.98 clamp)
- [ ] 캐릭터·책상보다 아래 depth (캐릭터 가림 방지)
- [ ] 앱 재시작 후 가구 위치 그대로 유지

### 알려진 한계
- 자리(seat) 영역 충돌 검사 없음 — 사용자가 자유 배치 (책상 위에 가구 올릴 수 있음)
- 그리드 스냅 없음 — 자유 좌표
- 신규 픽셀 5종은 단순 형태 (8 wide 정도) — 디테일 부족하면 향후 PNG로 교체

---

## 채팅 영구화 풀 스펙 (Day 11 후속, P1 #13 완성)

### 무엇
*기존 (P1 #13 메모리 only)*: `messagesByEmployeeRef`로 직원별 채팅 이력 메모리 보관. 같은 직원 채팅 다시 열면 이력 복원. 하지만 **앱 재시작 시 모두 사라짐**.

*풀 스펙*: app-data.json에 `chatHistories: Record<employeeId, ChatMessage[]>` 별도 키로 저장 — **앱 재시작 후도 이력 유지**.

- 새 Platform 메서드: `loadChatHistory` / `saveChatHistory` / `clearChatHistory`
- ChatPopup `onOpen` 시 1) 메모리 ref → 2) 영속 저장소 → 3) 신규 system msg 순서로 로드
- messages 변경 시 **300ms debounce** 후 자동 저장 (짧은 연속 변경 시 마지막만)
- 해고(`removeEmployee`) 시 채팅 이력도 자동 삭제 (store.ts에서 + chat:force-close 핸들러)

### 사용 방법
1. 직원 채팅창 열기 → 메시지 몇 개 보냄
2. 채팅창 닫고 다시 열기 → 이력 복원 (기존 P1 #13)
3. **앱 종료 → 재시작 → 같은 직원 채팅창 열기 → 이력 복원** ← 풀 스펙 핵심
4. 직원 해고 → 채팅 이력 같이 삭제

### 기대 동작 ☐
- [ ] 채팅 1개 보내고 다시 열면 이력 복원 (P1 #13 회귀 OK)
- [ ] 앱 재시작 후 채팅창 열면 이전 이력 복원 ← *풀 스펙 핵심*
- [ ] 채팅 빠르게 여러 개 보내도 저장 안정 (300ms debounce)
- [ ] 직원 해고 시 그 직원 채팅 이력 사라짐 (다른 직원은 영향 X)
- [ ] 다른 직원 채팅창은 영향 없음 (employeeId별 분리)

### 알려진 한계
- 채팅 이력이 무한 누적 — 영구 저장이므로 옛 메시지 자동 삭제 안 함. 추후 *최대 N개* 또는 *오래된 것 자동 정리* 정책 필요

---

## 빈 자리 평소 숨김 (Day 11 후속, P1 잔여)

### 무엇
기존: 빈 자리(직원 없는 책상·의자·모니터)가 항상 visible → 화면 어수선.
개선: **채용 모달 열렸을 때 + 자리 이동 모드일 때만** 빈 자리 표시. 평소엔 직원 있는 자리만 보임.

- App.tsx에서 `hireOpen` 변경 시 `eventBus.emit('office:hire-mode', open)`
- OfficeScene `setEmptySeatsVisibility(visible)` 메서드 — workstations 순회, `employee === null && team !== null` 자리 토글
- `enterMoveMode` 시 강제 true / `exitMoveMode` 시 hireMode에 따라
- `rebuildWorkstations` 끝에 동기 (새 자리 생성 시 즉시 적용)
- 사장석은 별도 plate라 항상 visible 유지

### 사용 방법
1. 앱 실행 → 빈 자리 안 보임 (직원 있는 자리만)
2. 좌상단 "+ 채용" 버튼 → 빈 자리 등장
3. 채용 모달 닫기 → 빈 자리 사라짐
4. 직원 우클릭 → "🚶 자리 이동" 선택 → 빈 자리 등장 (이동 가능 자리 표시)
5. 이동 완료/취소 → 빈 자리 다시 사라짐

### 기대 동작 ☐
- [ ] 앱 시작 시 직원 있는 자리만 보임 (책상·의자·모니터·hireZone)
- [ ] 사장석은 빈 상태여도 항상 visible (👑 사장석 plate)
- [ ] "+ 채용" 클릭 → 빈 자리 모두 등장
- [ ] 채용 모달 닫기 → 빈 자리 사라짐
- [ ] 자리 이동 모드 → 빈 자리 등장 + 이동 완료 후 사라짐
- [ ] 자리 이동 취소 (ESC) → 빈 자리 사라짐 (hireMode가 false면)
- [ ] 채용 모달과 이동 모드 동시 트리거 — 둘 중 하나라도 활성이면 visible

### 알려진 한계
- 채용 모달 열려있는 동안에 자리 이동 모드 진입은 UI 흐름상 발생 안 함 — 둘 다 활성인 경우는 가정 안 함

---

## 상점 픽셀 미리보기 + 배치 모드 (Day 11 후속 +1)

### 무엇
사용자 피드백 — "상점 아이콘이 사무실 배치 이미지와 동일했으면" + "중앙 자동 배치 X, 클릭한 위치에 떨어져야".

- **픽셀 미리보기**: 상점 가구 카드의 emoji 자리에 실제 사무실 배치 이미지와 동일한 픽셀 그림 (Canvas 2D)
- **배치 모드**: 상점 "🏢 사무실에 배치" 클릭 → 모달 자동 닫힘 → 마우스 따라 ghost preview → 클릭 위치에 떨어짐 → ESC/우클릭 취소
- **상점 카드 크기 키움**: shop-grid-furniture (minmax 200px) + shop-item-furniture (큰 카드, padding 16px) + 픽셀 영역 80px 최소 높이, 체크무늬 배경
- 데이터 단일 출처: `src/shared/furnitureCatalog.ts` — ShopModal·OfficeScene·preview가 같이 import

### 사용 방법
1. 상점 🛍 버튼 → 가구 카드 8종 (픽셀 미리보기 + 큰 카드)
2. "🏢 사무실에 배치" 클릭 → 모달 자동 닫힘
3. 마우스 따라 반투명 ghost 가구 표시 + 화면 상단 안내 텍스트 "🪑 원하는 위치를 클릭하세요"
4. 사무실 영역 클릭 → 그 위치에 배치
5. (취소) ESC 키 또는 우클릭

### 기대 동작 ☐
- [ ] 상점 가구 8종 카드가 emoji 대신 실제 픽셀 이미지로 표시 (사무실에 배치된 가구와 100% 동일)
- [ ] 카드가 이전보다 크고 디테일 잘 보임 (200px+ 카드, 체크무늬 배경 위 픽셀)
- [ ] "사무실에 배치" 클릭 시 모달 즉시 닫힘
- [ ] 마우스 위치에 반투명 ghost 가구 따라옴 (zoom·panning 반영)
- [ ] 화면 상단 안내 텍스트 표시 (줌·panning 시에도 화면 고정)
- [ ] 좌클릭 → ghost 위치에 가구 배치, 안내·ghost 사라짐
- [ ] ESC 키 → 배치 취소, ghost·안내 사라짐, 가구 안 떨어짐
- [ ] 우클릭 → 배치 취소 (같음)
- [ ] 사무실 가장자리 클릭 시 xRatio/yRatio 0.02~0.98로 clamp (밖으로 나가지 않음)

### 알려진 한계
- 자리(seat) 영역 충돌 검사 없음 — 책상 위에도 배치 가능 (자유 배치)
- 미구현 가구 4종(coffee-machine 등)은 별도 섹션에 emoji 카드로 분리 표시

---

## 자리 이동 안내·드롭 박스 카메라 분리 fix (Day 11 후속 +1, 버그 수정)

### 무엇
사용자 스크린샷 — 자리 이동 모드에서 줌을 줄이면 안내 텍스트와 빈 자리 박스가 각각 **2개씩 중복 표시**되던 버그.

### 원인
`moveModeHint` (안내 텍스트)와 `dropTargetHighlights` (빈 자리 박스)가 생성 시 카메라 ignore 처리 누락 → main 카메라 + uiCamera 양쪽에 동시 렌더링.

### 수정
- `moveModeHint`: `this.cameras.main.ignore()` → uiCamera에만 보임 → 화면 고정 (zoom 영향 X)
- `dropTargetHighlights`: 각 박스 생성 시 `this.uiCamera?.ignore(hi)` → main 카메라에만 보임 → 책상 좌표 따라감

### 기대 동작 ☐
- [ ] 직원 우클릭 → "자리 이동" → 안내 텍스트 1개만 (화면 상단)
- [ ] 줌 인/아웃 시에도 안내 텍스트는 화면 같은 위치 (zoom 영향 X)
- [ ] 빈 자리 박스 (초록·빨강) 각 책상에 1개씩만 표시
- [ ] 줌 인 시 박스도 같이 커짐 (책상과 함께 zoom)
- [ ] 패닝(드래그) 시 박스가 책상과 함께 이동

---

## MemoModal 외형 편집 제거 (Day 11 후속 +1, UX 정리)

### 무엇
사용자 결정 — "캐릭터 외형은 최초 채용 시에만 변경 가능, 메모에서는 못 바꿔야".

### 사용 방법
- 메모 모달 열어도 "🎨 캐릭터 외형" 섹션이 더 이상 안 보임
- 외형 변경은 채용(HireModal)에서만 가능

### 기대 동작 ☐
- [ ] 직원 우클릭 → "메모" → 모달에 외형 편집 섹션 없음 (이름·역할·이모지·지침·모델·메모리·통계만)
- [ ] 채용(+ 버튼) 모달에서는 외형 편집 (색·무늬) 여전히 가능
- [ ] 기존 직원의 외형 데이터는 그대로 유지 (저장 시 employee.customColor/pattern 그대로 전달)

### 알려진 한계
- 외형 편집 JSX·import는 주석으로 보존 — 향후 별도 위치(예: 외형 전용 모달)로 옮길지 검토

---

## 캐릭터 hover 명함 카드 주석 (Day 11 후속 +1, UX 정리)

### 무엇
사용자 결정 — "일단 주석처리 해 나중에 어디에 보이게 할지 고민해볼께".

### 기대 동작 ☐
- [ ] 캐릭터 위에 마우스 호버해도 명함 카드 (이름·직급·역할·모델) 안 나옴
- [ ] 기존 클릭 기능 (채팅창 열기 / 우클릭 컨텍스트 메뉴) 그대로 작동
- [ ] 다른 hover UX (빈 자리 hireZone 등) 영향 없음

### 알려진 한계
- App.tsx의 state·이벤트 핸들러·JSX 모두 주석으로 보존 — 향후 다른 위치(예: 우측 사이드 패널)에 다시 보일지 결정

---

## 감정 자동 트리거 (Day 12 §1)

### 무엇
LLM이 채팅 응답마다 마지막 줄에 `[emotion:xxx]` 태그(12종)를 붙이도록 system prompt에서 강제. 응답이 도착하면 본문에서 태그를 제거하고 그 감정을 5초 동안 직원 머리 위 말풍선에 표시한 뒤 직원의 기본 감정(idleEmotion)으로 복귀.

### 사용 방법
1. 직원 아무나 더블클릭 → 채팅창 열기
2. 메시지 보내기 → LLM 응답 받기
3. 응답 도착 순간 → 직원 말풍선 픽셀이 5초간 응답 감정으로 변함 → 5초 후 기본값으로 복귀
4. 채팅창 본문에는 `[emotion:xxx]` 태그가 *제거된* 깨끗한 텍스트만 보임

### 감정 12종 (BUBBLE_INNER_PIXELS 키)
| 키 | 한글 라벨 | 의미 |
|---|---|---|
| `thinking` | 생각 중 | 평범한 응답·기본값 |
| `happy` | 기쁨 | 즐거움·칭찬 받음 |
| `surprised` | 놀람 | 의외·놀라움 |
| `sleepy` | 졸음 | 피곤·졸림 |
| `confused` | 혼란 | 질문 모호함 |
| `idea` | 아이디어 | 좋은 제안 떠올림 |
| `love` | 사랑 | 감사·깊은 호감 |
| `angry` | 화남 | 분노·짜증 |
| `sad` | 슬픔 | 미안함·사과 |
| `sweat` | 땀 | 당황·어려움 |
| `music` | 음악 | 즐거운 분위기 |
| `wow` | 와우 | 감탄·흥분 |

### 기대 동작 ☐
- [ ] LLM 응답이 도착하면 직원 말풍선 픽셀이 5초간 응답 감정으로 변함
- [ ] 채팅창 본문에 `[emotion:xxx]` 텍스트가 *보이지 않음* (정상)
- [ ] 5초 후 말풍선이 직원의 idleEmotion(미설정 시 thinking)으로 자동 복귀
- [ ] 모델이 태그를 누락해도 채팅창은 정상 작동 (응답 텍스트 그대로 표시, 감정 변화만 생략)
- [ ] 12종이 아닌 다른 키(예: `[emotion:tired]`)가 와도 무시 (정상 응답은 유지, 감정 변화만 생략)
- [ ] Claude / Gemini 모두에서 작동

### 알려진 한계
- 모델이 가끔 태그를 *응답 중간*에 넣을 수 있음 — 본문 제거는 정상이지만 어색할 수 있음. 정규식은 위치 무관.
- Gemini safety filter가 감정 태그 자체를 차단하지는 않는지 검증 필요 (Day 10에서 가드 문구는 충돌 사례 있었음 → 12종 화이트리스트는 모두 일상 감정으로 안전한 편)
- "직원 페르소나 system prompt 강화"로 토큰 약 200토큰 추가 → 비용 미세 증가

---

## 기본 감정 idleEmotion — MemoModal 선택 UI (Day 12 §1)

### 무엇
직원마다 평소 말풍선에 표시할 *기본 감정*을 정해두는 기능. 채팅 응답 후 5초 시각화가 끝나면 이 기본값으로 돌아감. `Employee.idleEmotion?: BubbleEmotion`. 미설정 시 `thinking`.

### 사용 방법
1. 직원 책상 옆 노란 메모지 클릭 또는 우클릭 → "📝 메모지 열기"
2. 메모 모달 안에 "🎭 기본 감정 (말풍선)" 섹션
3. 12 버튼 grid (이모지 + 한글 라벨) 중 1개 선택 → 노란 배경 + 갈색 테두리
4. "저장" → 즉시 사무실 말풍선에 반영

### 기대 동작 ☐
- [ ] 메모 모달 열면 12개 감정 버튼 grid 보임 (`⋯ ◡ ‼ Z ? 💡 ♥ ✗ 💧 💦 ♪ ✨` + 한글 라벨)
- [ ] 현재 idleEmotion이 노란 배경 + 갈색 2px 테두리로 표시 (미설정 시 thinking 강조)
- [ ] 다른 감정 클릭 → 시각적으로 선택 강조 이동
- [ ] 저장 후 즉시 사무실에서 그 직원 말풍선 픽셀이 선택한 감정으로 변경
- [ ] 채팅 응답 후 5초 시각화 끝나면 새 idleEmotion으로 복귀 (thinking 아님)
- [ ] 새로 채용한 직원은 idleEmotion 미설정 → thinking으로 시작

### 알려진 한계
- 채용(HireModal)에서는 idleEmotion 선택 UI 없음 (메모 모달에서만). 채용 직후 변경하려면 메모 모달 한 번 더 열어야 함.
- 12종 픽셀은 `OfficeScene.BUBBLE_INNER_PIXELS`에 정의됨. 새 감정 추가 시 두 곳(`BUBBLE_INNER_PIXELS` + `EMOTION_LABELS`) 같이 갱신 필요.

---

## 가구 우클릭 컨텍스트 메뉴 (Day 12 §1)

### 무엇
배치된 가구를 우클릭하면 메뉴 3종 표시. 즉시 삭제 → 옮기기 / 이 가구 삭제 / 전체 가구 삭제 3종으로 확장.

### 사용 방법
1. 상점에서 가구 1개 이상 배치
2. 배치된 가구 위에서 우클릭
3. 메뉴 표시:
   - **🚚 옮기기** → 옮기기 모드 진입 (원본 일시 숨김 + ghost preview 마우스 따라옴 + 새 위치 클릭)
   - **🗑 이 가구 삭제** → 해당 가구만 즉시 제거
   - **🧹 전체 가구 삭제** → confirm 후 사무실 모든 가구 한 번에 제거
4. 메뉴 외부 클릭 또는 ESC → 메뉴 닫힘

### 기대 동작 ☐
- [ ] 가구 우클릭 → 마우스 위치 옆에 메뉴 표시 (배경 + "🪑 가구 옵션" 헤더 + 3 버튼)
- [ ] 메뉴 외부 클릭 → 메뉴 닫힘
- [ ] ESC 키 → 메뉴 닫힘
- [ ] 좌클릭으로 가구 드래그 이동은 여전히 작동 (기존 드래그앤드롭)
- [ ] 🚚 옮기기 클릭 → 메뉴 닫힘 + 옮기기 모드 진입 (안내 텍스트 "🚚 새 위치를 클릭하세요")
- [ ] 🗑 이 가구 삭제 클릭 → 그 가구만 사라짐 + 메뉴 닫힘
- [ ] 🧹 전체 가구 삭제 클릭 → "사무실의 모든 가구를 삭제하시겠습니까?" confirm → 확인 시 모두 사라짐 + 메뉴 닫힘 / 취소 시 그대로 + 메뉴 닫힘
- [ ] 메뉴는 직원 우클릭 메뉴와 동일 스타일

### 알려진 한계
- 메뉴 표시 위치는 마우스 clientX/clientY 기준 — 화면 끝에서 우클릭하면 메뉴가 잘릴 수 있음
- 전체 삭제는 되돌리기 없음 (`placedFurniture: []`로 갱신)

---

## 가구 옮기기 모드 (Day 12 §1)

### 무엇
우클릭 → 🚚 옮기기로 진입하는 모드. 원본 가구는 임시로 숨겨지고, 마우스를 따라가는 ghost preview가 표시됨. 새 위치를 클릭하면 그 위치로 가구가 이동. ESC/우클릭 취소 시 원본 복원.

### 사용 방법
1. 배치된 가구 우클릭 → "🚚 옮기기" 클릭
2. 원본 가구 사라지고 마우스에 가구 ghost preview 따라옴
3. 화면 상단 안내: "🚚 새 위치를 클릭하세요 (ESC 또는 우클릭 = 취소)"
4. 새 위치 좌클릭 → 그 위치로 이동 + 모드 종료
5. ESC 또는 우클릭 → 원본 위치로 복원 + 모드 종료

### 기대 동작 ☐
- [ ] 우클릭 메뉴 → 🚚 옮기기 → 원본 가구 사라짐
- [ ] 마우스 따라 ghost preview (알파 0.55) 표시 — 줌·패닝에도 정확한 월드 좌표
- [ ] 화면 상단 "🚚 새 위치를 클릭하세요" 안내 텍스트 (uiCamera 고정, 줌 영향 X)
- [ ] 커서 crosshair로 변경
- [ ] 새 위치 좌클릭 → 그 위치에 가구 이동 + 모드 종료 + 커서 복원
- [ ] ESC 키 → 원본 위치로 복원 + 모드 종료 (가구 사라진 게 다시 나타남)
- [ ] 우클릭 → ESC와 동일 (원본 복원)
- [ ] 사무실 가장자리(xRatio 0.02~0.98 밖) 클릭해도 가장자리에 clamp됨

### 알려진 한계
- 옮기는 동안 다른 가구 클릭은 안 됨 (placement mode 활성 동안 다른 가구 입력 일시 차단)
- 옮기기 모드 진입 후 채팅창 열거나 다른 모달 열면 ghost가 모달 뒤에 가려질 수 있음 (depth 50이지만 React 모달이 더 위)

---

## Portable EXE 빌드 — `pnpm dist:exe` (Day 12 §1)

### 무엇
Electron + Vite + React 빌드 결과물을 `electron-builder`로 Windows portable .exe(설치 없이 더블클릭 실행)로 패키징. 다른 사용자에게 데모 전달용.

### 사용 방법
```powershell
cd PixelAgentOffice
pnpm install   # electron-builder 신규 devDep
pnpm dist:exe  # build + electron-builder --win portable
```

### 출력 위치
- `PixelAgentOffice/release/PixelAgentOffice-<version>-portable.exe`

### 기대 동작 ☐
- [ ] `pnpm dist:exe` 실행 → `pnpm build` (Vite + tsc) → `electron-builder` 호출 → 빌드 성공
- [ ] `release/` 폴더에 `PixelAgentOffice-x.y.z-portable.exe` 생성 (약 100~200MB 추정)
- [ ] 그 .exe 파일을 *다른 폴더* 또는 *다른 PC*로 복사 → 더블클릭 → 정상 실행 (Electron 윈도우 떠짐)
- [ ] 빌드된 앱에서 API 키 입력 → 채팅 → 정상 응답 (회사망 임시 fix 누출 없음 — `app.isPackaged` 가드 작동)
- [ ] 빌드된 앱 종료 후 임시 폴더 자동 정리 (portable의 표준 동작)

### 알려진 한계
- 아직 코드 사인 없음 → Windows SmartScreen 경고 표시될 수 있음 ("Windows에서 PC를 보호했습니다")
- 자동 업데이트 미설정
- 앱 아이콘 미설정 (Electron 기본 아이콘)
- macOS / Linux 타겟 미추가 (현재 `win.target: portable`만)
- 사용자 데이터 (electron-store) 경로: `%APPDATA%\PixelAgentOffice` — portable이지만 영속 데이터는 저장됨

---

## 빈 사무실 첫 실행 (Day 12 §2 — 배포 빌드용)

### 무엇
이전: 첫 실행 시 더미 직원 Mary(편집자)·Haewol(작가)가 자동 생성. 개발 단계엔 빈 사무실 무의미 방지용이었음.
변경: `createDefaultData()`의 employees를 빈 배열로 → 첫 실행 = 완전히 텅 빈 사무실. 테스터가 "+ 채용" 버튼으로 직접 시작.

### 코드 변경
- `electron/data/store.ts createDefaultData()` — Mary/Haewol 더미 직원 2명 제거 (빈 `Employee[]` 반환)
- 미사용 import (`TEMPLATES`) 및 변수 (`now`) 같이 제거

### 사용 방법 (테스터)
1. 첫 실행 → 사장석만 있고 모든 멤버 자리 빈 상태
2. ⚙ 설정 → API key 입력 (Gemini 무료 / Anthropic 유료)
3. "+ 채용" → HireModal에서 이름·역할·이모지·외형·모델 설정 → 채용
4. 캐릭터가 자리에 등장 → 우클릭으로 채팅·메모·자리이동 등

### 기대 동작 ☐
- [ ] 새 PC에서 EXE 실행 → 첫 화면이 빈 사무실 (사장석 plate 만 + 멤버 자리 16개 빈 상태)
- [ ] "+ 채용" 클릭 시 모달 등장 + 채용 후 캐릭터가 첫 빈 자리에 등장
- [ ] 기존 PC에 이전 데이터 (Mary/Haewol)가 남아있으면 그대로 보임 — 빈 사무실 보려면 `%APPDATA%\PixelAgentOffice\` 폴더 삭제 필요

### 알려진 한계
- 빈 사무실이 "처음 봤을 때 뭘 해야 할지 모름" 우려 있음 → 향후 온보딩 안내 (튜토리얼) 추가 검토. 지금은 "+ 채용" 버튼이 화면 좌상단에 명확히 보이는 것으로 충분히 유도된다고 판단

---

## EXE 배포 — GitHub Releases v0.0.1 (Day 12 §2)

### 무엇
첫 외부 테스터 배포. Portable EXE 단일 파일을 GitHub Releases에 첨부. 테스터는 다운로드 → 더블클릭 → 실행.

### 배포 파일
- `release/PixelAgentOffice-0.0.0-portable.exe` (98 MB, Windows 64-bit Portable)
- GitHub Releases v0.0.1 첨부

### 테스터 사용 가이드 (Release notes에 포함될 안내)
1. `PixelAgentOffice-0.0.0-portable.exe` 다운로드
2. 더블클릭 → SmartScreen 경고 "Windows에서 PC를 보호했습니다" 표시 → **"추가 정보"** 클릭 → **"실행"** 버튼 (코드 사이닝 없어서 정상 발생)
3. Electron 창 실행 → 첫 화면 빈 사무실
4. 좌상단 ⚙ → API key 입력
   - **Gemini (무료)**: https://aistudio.google.com/apikey
   - **Anthropic (유료)**: https://console.anthropic.com/
5. "+ 채용" → 첫 직원 만들기 → 우클릭으로 채팅·메모 등 자유 사용
6. 데이터 저장 위치: `%APPDATA%\PixelAgentOffice\` (제거 시 폴더 삭제)

### 기대 동작 ☐ (테스터 측 검증)
- [ ] EXE 다운로드 → 더블클릭 → SmartScreen "추가 정보 → 실행" → 정상 실행
- [ ] 첫 화면 빈 사무실 + 좌상단 토큰보드 + 시계 + 창문 풍경 + ⚙ + 🛍 + + 채용 버튼 모두 정상 표시
- [ ] ⚙ → API key 입력 → 저장
- [ ] + 채용 → 직원 채용 → 캐릭터 자리에 등장
- [ ] 직원 클릭 → 채팅 모달 → 메시지 보내고 LLM 응답 받기 (회사망 SSL 문제 없는 환경에서)
- [ ] 응답 후 말풍선 emotion 5초 변화 → idle로 복귀
- [ ] 직원 우클릭 → 메모/자리이동/회전/해고
- [ ] 🛍 상점 → 가구 픽셀 미리보기 확인 + "사무실에 배치" → ghost 따라옴 → 클릭 위치에 배치
- [ ] 배치된 가구 우클릭 → 옮기기 / 삭제 / 전체 삭제

### 알려진 한계 / 우려
- 코드 사이닝 없음 → SmartScreen 경고 (정상, 안내문 포함)
- 회사망 PC에서는 SSL inspection으로 LLM 호출 실패 가능 (테스터에게는 *회사망 X* 환경 권장)
- 자동 업데이트 없음 → v0.0.2 나오면 새 EXE 다시 다운받아야
- macOS / Linux 미지원

### 다음 버전 후보 (v0.0.2)
- 코드 사이닝 인증서 도입 검토 (SmartScreen 우회)
- 앱 아이콘 추가 (.ico)
- 자동 업데이트 (electron-updater)
- 첫 실행 온보딩 안내 (튜토리얼)
- MBTI 별명 톤 결정 (Day 12 §3 보류)

---

## MBTI 16종 페르소나 시스템 (Day 12 §3)

### 무엇
캐릭터마다 MBTI 16종 중 1을 부여 → LLM 응답이 해당 페르소나에 따라 변함. 16personalities 베이스 + 사용자 발견 컨셉 ("INTP는 패야 일함" 등).

### 구성
- `shared/types.ts`: `MBTI` 타입 (16종), `MBTIProfile` (id/group/nickname/emoji/responseStyle/trait), `MBTI_PROFILES` 카탈로그, `Employee.mbti?`
- 16종: NT 분석가 (INTJ 🎯 / INTP 🔬 / ENTJ 😎 / ENTP 🦊) / NF 외교관 (INFJ 🌙 / INFP 🌸 / ENFJ ✨ / ENFP 🌈) / SJ 관리자 (ISTJ 📋 / ISFJ 🌿 / ESTJ 💼 / ESFJ 🤗) / SP 탐험가 (ISTP 🔧 / ISFP 🎵 / ESTP ⚡ / ESFP 🎤)

### HireModal UI
- 🧬 MBTI 페르소나 섹션 (외형 다음)
- 4자 input, 자동 대문자 변환, maxLength 4
- 자동 인식 → 매칭되면 tip 카드 (emoji + nickname + 대답 방식 + 성향)
- 잘못 입력 시 빨간 경고
- ⓘ 아이콘 → 중첩 모달 (4그룹별 16종 전체 카드)

### LLM 통합
- `ChatPopup buildSystemPrompt`: employee.mbti 있으면 시스템 프롬프트에 `# MBTI 페르소나: ${mbti} (${nickname})` 섹션 자동 주입
- 대답 방식 + 성향 + "어조와 접근 방식에 페르소나 녹이세요" 가이드

### 기대 동작 ☐
- [ ] HireModal MBTI 칸에 `intp` 입력 → INTP 인식 → 옆에 tip 카드 (🔬 논리학자 + 대답 방식 + 성향)
- [ ] 잘못된 4자 (예: `xxxx`) → 빨간 경고 메시지
- [ ] ⓘ 아이콘 클릭 → 16종 전체 설명 중첩 모달
- [ ] 채용 완료 → 직원에 `mbti: 'INTP'` 저장
- [ ] 그 직원에게 채팅 → LLM이 INTP 페르소나로 응답 (이론적·분석적·약간 게으름)

### 알려진 한계
- 별명 톤 (논리학자/전략가 등) 딱딱함 → Day 12 §3 보류, 다음 세션 결정 (게임형 / 한국 밈 / 직업 톤)

---

## 감정 미리보기 모달 (Day 12 §3 — 8번 보류 사항 해결)

### 무엇
상점의 🎭 감정 갤러리 — 이전: 12개 카드 grid + 클릭 시 전체 직원에 5초 emit (상점 모달이 가려서 효과 못 봄). 변경: **작은 중첩 모달**로 캐릭터 + 말풍선 미리보기.

### 구현
- 신규 `src/components/EmotionPreviewModal.tsx` (460px 모달, zIndex 200)
- Canvas 280×220 — 베이지 격자 배경 + Clawd basic 캐릭터 (Canvas 그림) + 말풍선 + 이모지 (Canvas fillText)
- 12종 버튼 grid → 클릭 시 즉시 캔버스 갱신
- ESC / × / 닫기

### 사용 방법
1. 🛍 상점 → "🎭 감정 미리보기 열기" 버튼 (12개 카드 grid는 제거됨, 버튼 하나로 단순화)
2. 모달 안에서 12종 버튼 클릭 → 캐릭터 머리 위 말풍선이 그 이모지로 변경
3. 시각 확인 후 닫기

### 기대 동작 ☐
- [ ] 🛍 상점 → "감정 미리보기 열기" 버튼 표시 (이전의 12개 카드 grid는 제거)
- [ ] 클릭 시 작은 모달 등장 (zIndex 200, 상점 위에 표시)
- [ ] 캐릭터 (Clawd basic) + 말풍선 + 이모지 캔버스 표시
- [ ] 12종 버튼 (4×3 grid) 클릭 → 즉시 캔버스 갱신
- [ ] 모달 헤더에 현재 emotion 라벨 표시 (예: "🎭 감정 미리보기 — 😄 기쁨")

---

## 말풍선 이모지 전환 (Day 12 §3)

### 무엇
이전: 말풍선 안 5×5 픽셀 grid로 emotion 표현 (BUBBLE_INNER_PIXELS)
변경: Phaser Text + 사용자가 정한 12종 이모지

### 이모지 매핑 (사용자 결정)
- thinking … / happy 😄 / surprised 😶 / sleepy 😴 / confused 🤔 / idea 💡 / love ❤️ / angry 😡 / sad 😭 / sweat 😅 / music 🎵 / wow 😮

### 구현
- `EMOTION_LABELS` (shared/types.ts) 이모지 갱신
- OfficeScene `workingBubble` 초기 생성 + `setBubbleEmotion`: drawPixelGrid → `this.add.text(...)` Phaser Text
- `Workstation.workingBubble` 타입 `Container | Text`로 일반화
- EmotionPreviewModal Canvas도 `ctx.fillText`
- 폰트: `"Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", sans-serif`

### 기대 동작 ☐
- [ ] 직원 채용 시 평소 말풍선 … (idleEmotion 기본 thinking)
- [ ] LLM 응답 + `[emotion:happy]` → 말풍선이 😄로 5초 → … 복귀
- [ ] 12종 모두 정상 렌더 (이모지 폰트 fallback OK)
- [ ] 미리보기 모달에서도 동일

### 알려진 한계
- 픽셀 게임 일관성 살짝 부조화 (이모지 컬러 + 픽셀 배경)
- 향후 PNG asset 도입 시 픽셀 emotion 부활 가능 (BUBBLE_INNER_PIXELS 보존)

---

## UX 정리 9건 (Day 12 §3)

### 1. 첫 페이지 "빈 자리 클릭" 안내 제거
P0 #6에서 빈 자리 클릭 채용은 이미 비활성. 안내문만 남아있던 거 제거.
- [ ] 첫 실행 시 "또는 사무실의 빈 자리를 클릭" 텍스트 안 보임

### 2. + 채용 버튼 펄스 부활
Day 8에 제거됐던 펄스 애니메이션 복구. 직원 0명일 때 노란색 빛남.
- [ ] 처음 실행 (직원 0명) → + 채용 버튼이 노란색으로 깜빡임
- [ ] 첫 직원 채용 후 → 펄스 사라짐

### 3. 커스텀 템플릿 카드 단순화
이전: "🐙 / 직업 입력 / 새 직원" → 변경: "🐙 / 새 직원" 한 줄
- [ ] 채용 모달 → 캐릭터 템플릿 → 커스텀 카드에 "새 직원"만 표시

### 4. HireModal 정체성 필수값 + placeholder
이전: name/role 초기값 "Mary"/"편집자" 들어가 있어 그대로 채용되면 그 이름. 변경: 초기값 ""로, placeholder만, required.
- [ ] 채용 모달 처음 열 때 이름·역할 칸 비어있음 (placeholder만)
- [ ] template 변경 시 placeholder만 변경 (예: editor → "예: Mary")
- [ ] 이름·역할 빈 채로 채용 시도 → "이름과 역할을 입력해주세요" alert
- [ ] 제목에 빨간색 "* 필수" 표시

### 5. 커스텀 지침 placeholder + ⓘ tip
이전: 4개 직업 예시 placeholder. 변경: 페르소나 예시 placeholder + ⓘ 클릭 시 직업 예시 tip 카드.
- [ ] 커스텀 지침 placeholder "예) 사색과 바다를 사랑합니다. 항상 존댓말을 쓰며..."
- [ ] 라벨 옆 ⓘ 아이콘 클릭 → "직업 : 특징" 형식 예시 tip 카드

### 6. "과장 이상" 리더 자격 빨간 강조
- [ ] 직급 섹션 안내문에 "⭐ 과장 이상만 리더 자리에 앉을 수 있습니다" 빨간 굵은 글씨

### 7. 대화 모델 키 없으면 비활성
- [ ] API key 없는 provider의 모델 버튼 disabled (회색·"키 없음" 라벨)
- [ ] 둘 다 키 없으면 빨간 안내 박스 + "⚙ 설정 열기" 버튼 → 클릭 시 채용 모달 닫고 설정 모달 자동 열림
- [ ] 키 없는 모델 선택 후 채용 시도 → "API 키가 없습니다" alert

### 8. 빈 자리 토글 — 채용 모달 트리거 제거
이전: 채용 모달 열면 빈 자리 표시 (모달이 화면 가려서 무의미). 변경: 자리 이동 모드에서만 표시.
- [ ] + 채용 클릭해도 빈 자리 안 보임 (모달이 화면 가림)
- [ ] 직원 우클릭 → 자리 이동 → 빈 자리 등장
- [ ] 이동 완료/취소 → 빈 자리 사라짐

### 9. 기본 가구 제거
이전: 첫 실행 시 화분 2개·책장·자판기 고정 배치. 변경: 사무실 완전히 빈 상태로 시작.
- [ ] 첫 실행 → 캐릭터·사장석·시계만 있고 가구 0개
- [ ] 상점에서 직접 배치해야 가구 등장

---

## 이모지 timer 충돌 fix (Day 12 §3)

### 무엇
이모지가 5초 표시되어야 하는데 2초만 표시되고 사라지는 버그.

### 원인
응답 도착 시 두 이벤트 연속 발생:
1. `agent:reply` → `replyHandler` → `setBubbleEmotion('happy', 2000)` (2초 timer 생성)
2. `agent:set-emotion` → `setEmotionHandler` → `setBubbleEmotion(emotion, 5000)` (5초 timer 생성)

두 번째 호출이 이모지 덮어쓰지만 **첫 번째의 2초 timer가 살아있어** 2초 후 idle로 복귀 → 이모지 짧게 사라짐.

### 수정
- `Workstation.bubbleEmotionTimer?: Phaser.Time.TimerEvent` 필드 추가
- `setBubbleEmotion` 시작 시 이전 timer `remove(false)`로 취소
- 새 timer는 `target.bubbleEmotionTimer`에 보관

### 기대 동작 ☐
- [ ] 직원에게 메시지 보냄 → 이모지가 **5초 동안** 표시 → idle로 복귀
- [ ] 5초 도중 다른 emotion이 와도 정상 교체 (이전 timer 자동 취소)

---

## 알림 모달 + 빈 input 강조 (Day 12 §3 +1)

### 무엇
HireModal의 검증 알림 — `window.alert` 디자인이 어색 + 포커스 락 버그 → 모달 디자인 + input 강조로 교체.

### 구성
- **중첩 알림 모달** (modal-backdrop + modal, zIndex 150)
  - 헤더: "⚠️ 알림" 빨간색
  - 본문: 메시지 텍스트
  - 푸터: "확인" 버튼 (autoFocus, 엔터로 닫기)
  - 백드롭 클릭 / × / "확인" 모두 닫기
- **빈 input 빨간 강조** — `fieldErrors: { name?, role? }` state
  - 빈 칸으로 채용 시도 시 → 해당 input borderColor `#c83838` + box-shadow + 아래 빨간 메시지 ("⚠️ 이름을 입력하세요")
  - 사용자가 input 입력 → 자동 clear (onChange에서)
  - 검증 통과 시 → fieldErrors 전체 clear

### 5곳 alert 교체
- 이름·역할 필수값
- Google API 키 없음
- Anthropic API 키 없음
- 자리 부족
- 채용 실패

### 기대 동작 ☐
- [ ] 새 직원 선택 + 이름·역할 비운 채 "채용 완료" 클릭 → 알림 모달 등장 + 두 input 빨간 테두리 + 옆 메시지
- [ ] 알림 모달 "확인" 클릭 → 모달 닫힘 (HireModal은 그대로, input 입력 가능)
- [ ] 이름 입력 → 이름 input 강조 사라짐
- [ ] 역할 입력 → 역할 input 강조 사라짐
- [ ] 둘 다 입력 후 채용 → 정상 진행
- [ ] API 키 없는 모델 선택 후 채용 → 알림 모달 등장 (input 강조는 X)

### 알려진 한계
- Electron의 `window.alert`는 시스템 다이얼로그라 디자인 통제 X
- 다른 모달(MemoModal·ChatPopup)도 같은 패턴 적용 필요 시 별도 작업

---

## 기본 캐릭터 자동 채움 + 🤖 Cody 메인 캐릭터 (Day 12 §3 +1)

### 무엇
- TEMPLATES 4종에 *자동 채움 데이터* 추가 (Mary/Haewol/Cody) + 새 직원만 빈 칸
- 새 메인 캐릭터 🤖 Cody (개발자) 추가

### TEMPLATES 확장
| 필드 | 용도 |
|---|---|
| defaultCustomInstructions | 커스텀 지침 기본값 (페르소나) |
| defaultCustomColor | variant 'custom' 캐릭터 색 |
| defaultPattern | variant 'custom' 캐릭터 무늬 |

### 4종 캐릭터
| Template | 이모지 | 이름 | 역할 | 외형 | 페르소나 (custom 지침) |
|---|---|---|---|---|---|
| editor (Mary) | ✍️ | Mary | 편집자 | basic orange | "문장의 흐름과 일관성을 꼼꼼히 살피는 편집자..." |
| writer (Haewol) | 🪼 | Haewol | 작가 | jellyfish | "사색과 바다를 사랑합니다..." |
| **developer (Cody)** | **🤖** | **Cody** | **개발자** | **custom + gray + stripes** | **"말이 없고 ...을 많이 씁니다. 어려운 개발 용어 + 코딩 밈 드립"** |
| custom (새 직원) | 🐙 | (빈 칸) | (빈 칸) | custom (자유) | (빈 칸) |

### 동작
- HireModal 모달 열기 → editor(Mary) 기본 선택 → 이름·역할·지침·색·무늬 자동 채움
- 다른 기본 캐릭터 클릭 → 해당 페르소나로 모든 칸 교체
- 새 직원 클릭 → 모든 칸 비움 (placeholder만)
- 사용자가 자유 수정 가능 (custom variant라 외형 편집 UI도 노출)

### 채용 저장
- `template === 'custom'` → `TEMPLATES[template].variant === 'custom'` 변경 (Cody의 'developer'도 custom variant이므로 색 저장됨)

### 기대 동작 ☐
- [ ] 채용 모달 열기 → 캐릭터 템플릿 grid에 4개 카드 (✍️ Mary / 🪼 Haewol / 🤖 Cody / 🐙 새 직원)
- [ ] Mary 클릭 → 이름·역할·커스텀 지침 자동 채움
- [ ] Haewol 클릭 → 바뀜
- [ ] Cody 클릭 → 이름·역할·지침·**회색 줄무늬 외형** 자동
- [ ] 새 직원 클릭 → 모든 칸 빈 칸
- [ ] Cody 채용 완료 → 사무실에 **회색 줄무늬 문어** 등장
- [ ] Cody에게 채팅 → 말 적고 ... 자주, 개발 용어 + 밈 드립 응답

### 알려진 한계
- Cody는 별도 픽셀 정의 없이 custom variant 재활용 (gray + stripes 적용된 문어)
- 더 차별화된 외형 원하면 Clawd.ts에 'developer' variant 신규 추가 필요

---

## 활동 카운터 연결 (Day 13 — 진급/메모리/칭찬 Phase 1)

### 무엇
직원의 활동 통계(`totalMessages` / `totalMemoryUpdates` / `totalPraises`)를 실제 사용 흐름에 연결. 이전엔 채용 시 0으로 박제돼 메모 모달 "📊 그간 활동"이 항상 0이었음. 진급·메모리·칭찬 시스템의 공통 토대.

### 구현
- `incrementEmployeeStats(id, delta)` — store에 **원자적 증가** 함수 (디스크 현재값 + delta). `updateEmployee`의 patch 덮어쓰기와 달리 동시 갱신 시 카운트 유실 없음
- 5계층 배선: `shared/types.ts`(EmployeeStatsDelta) → `store.ts` → `main.ts`(IPC) → `preload.ts` → `platform/`(types·electron·mock)
- 호출처: ChatPopup 응답 성공 → `totalMessages +1` / MemoModal 저장 시 customInstructions 실제 변경 → `totalMemoryUpdates +1`

### 사용 방법
1. 직원 채용 → 채팅 1회 주고받기
2. 그 직원 메모지(📝) 열기 → "📊 그간 활동" → **총 대화: 1회**
3. 메모 모달에서 커스텀 지침 수정 후 저장 → 다시 열면 **지침 수정: 1회**

### 기대 동작 ☐
- [ ] 채팅 응답 1건 도착마다 메모 모달 "총 대화" +1
- [ ] 메모 모달에서 **지침을 바꿔** 저장 → "지침 수정" +1
- [ ] 메모 모달에서 모델/이모지만 바꿔 저장 → "지침 수정" **증가 안 함** (지침 미변경)
- [ ] 앱 재시작 후에도 카운트 유지 (영속화)
- [ ] 채팅 에러/중단 시에는 "총 대화" 증가 안 함 (성공 응답만)

### 알려진 한계
- 카운터는 누적될 뿐 — 진급 판정·메모리 주입은 별개 (Phase 3 진급은 완료, Phase 4 메모리는 다음 세션)

---

## 칭찬 👍 버튼 (Day 13 — Phase 2)

### 무엇
agent 응답마다 👍 버튼. 클릭 시 `totalPraises +1` + 메시지에 `praised` 영속 마킹(중복 방지) + 캐릭터 happy 이모지 4초. 정성형 진급의 칭찬 지표.

### 사용 방법
1. 직원과 채팅 → agent 응답 도착
2. 응답 아래 흐릿한 **👍** → 클릭
3. 버튼이 노랗게 활성(다시 못 누름) + 캐릭터 머리 위 😄 + 메모 모달 "받은 칭찬" +1

### 기대 동작 ☐
- [ ] agent 응답마다 아래 👍 버튼 (user/system 메시지엔 없음)
- [ ] 클릭 → 노란 활성 + 비활성화(중복 클릭 막힘)
- [ ] 채팅창 닫았다 다시 열어도 이미 칭찬한 응답은 활성 상태 유지 (영속화)
- [ ] 클릭 시 캐릭터 happy 이모지 4초
- [ ] 메모 모달 "받은 칭찬" 카운트 증가

### 알려진 한계
- 키워드 감지("잘했어/고마워" 자동 칭찬, 기획 §3-B)는 미구현 — 버튼만
- 칭찬 취소(👎) 없음

---

## 진급 시스템 (Day 13 — Phase 3, 기준 재정의 반영)

### 무엇
직원이 활동 누적으로 진급 자격에 도달하면 **캐릭터가 사장(사용자)에게 진급을 요청**하는 모달. 자동 진급이 아니라 승인 방식(ideas/11 §4). 직원별 `promotionMode`(정량/시간/정성/혼합/수동)에 따라 판정. **자동 진급은 부장까지**, 그 위(이사·사장)는 사용자가 직접 임명.

### 판정 기준 (`shared/promotion.ts`) — Day 13 재정의
- **정량형**: 누적 **대화 횟수만** (사원 50 / 대리 100 / 과장 200 / 부장 400) — 메모 조건 없음
- **시간형**: 입사 경과 (사원 3일 / 대리 2주 / 과장 1개월 / 부장 3개월)
- **정성형**: 받은 칭찬(👍) (사원 5 / 대리 20 / 과장 50 / 부장 100) — Day 13 재정의
- **혼합형**: 위 3개 중 2개 이상 충족
- **수동(off)**: 자동 제안 안 함
- **이사·사장**: 자동 진급 대상 아님 → 사용자가 직접 임명 (사장은 "회사 넘기기" 별도, 다음 세션)

### 진급 기준 노출 UI (Day 13)
- **채용 모달**: 진급방식 선택 시 그 방식의 구체 기준 tip + "이사·사장은 사장이 직접 임명" 안내
- **메모 모달 📈 진급 섹션**: 진급방식 변경(5버튼) + 다음 직급 진행도 바(예: 대화 30/50) + 부장이면 "⬆ 이사로 임명하기" 버튼
- **진급 요청 모달**: "✅ 진급 기준 달성 — 대화 50회" 문구
- **직급 팻말**: 캐릭터 이름·역할 아래 `🏆 직급` 갈색 배지 (진급 시 갱신)

### 트리거
- 정량/정성/혼합 → 채팅 응답·칭찬·메모 갱신으로 카운터 오른 직후 체크
- 시간형 → 앱 로드 시 1회 스캔

### 기대 동작 ☐
- [ ] 정량형 직원: 대화 50회 누적 → 알바→사원 진급 요청 모달 자동 등장 (정성형은 칭찬 1회로 빠르게 테스트 가능)
- [ ] 모달에 "✅ 진급 기준 달성 — (기준)" + 캐릭터 voice + 현재→희망 직급 + 성과
- [ ] "진급시키기" → 직급 오름(메모 🏆 + 사무실 팻말 반영) + 캐릭터 happy 6초
- [ ] 채용 모달에서 진급방식 클릭 시 기준 tip 바뀜
- [ ] 메모 모달에 진행도 바 + 진급방식 변경 가능
- [ ] 부장 직원 메모 모달에 "⬆ 이사로 임명하기" → confirm → 이사 승급
- [ ] 수동(off) 직원은 진급 요청 안 뜸
- [ ] 캐릭터 아래 `🏆 직급` 팻말 표시 (새로고침 후)

### 알려진 한계
- 사장 임명("회사 넘기기" — 사장석 이동·한명 제한)은 미구현 (이사까지만 임명)
- 회장·레전드는 자동·임명 모두 미지원
- 진급 voice는 기본 정중체 1종 — MBTI/성격별 변형은 후속
- 콘페티 등 연출 없음 (happy 이모지로 대체). 직급별 외형 변화도 후속

---

## 진급 난이도 배율 (Day 13)

### 무엇
설정에서 진급 기준 전체에 곱하는 배율 하나로 진급 속도를 조정. `Settings.promotionSpeedMultiplier`(기본 1). `effective = max(1, round(base × multiplier))`. 0.5=빠름(임계 절반), 1=기본, 2/3=느림. 이사·사장은 배율 무관(직접 임명).

### 사용 방법
⚙ 설정 → 📈 진급 속도(난이도) → 🚀빠름×0.5 / ⚖️보통×1 / 🐢느림×2 / 🏔매우느림×3 중 선택 → 저장. 전 직원에 즉시 적용.

### 기대 동작 ☐
- [ ] 설정에서 배율 선택 후 저장 → 메모 모달 진행도 바의 목표치가 배율 반영 (예 정량 사원 50 → ×2 면 100)
- [ ] 진급 요청 모달 "기준 달성" 문구도 같은 배율 임계 표시 (성과 숫자와 모순 없음)
- [ ] **배율 변경 즉시** 시간형 직원도 자격 재스캔 (앱 재시작 불필요)
- [ ] 승인 후 다음 자격자 있으면 모달이 이어서 뜸 (순차 진행)
- [ ] 정성형 빠름(×0.5): 사원 기준 5 → 3회로 줄어듦 (구분됨)

### 알려진 한계
- 직급별 개별 수치는 못 바꿈 (배율 하나로 전체 비례 조정만). 기준 수치 자체는 코드(`promotion.ts`)에 정의: 정량 50/100/200/400, 시간 3/14/30/90일, 정성 5/20/50/100
- 배율 손상값(NaN/0/음수)은 1로 폴백 (진급 차단 방지)

---

## 직원 기억 (메모리) 시스템 (Day 13 — Phase 4)

### 무엇
직원이 대화에서 사용자에 대한 사실(이름·선호·진행 중인 작업·반복 주제)을 누적 기억하고, 이후 채팅의 system prompt에 자동 주입해 "기억하는" 느낌을 주는 기능. 미완 레지스터 A의 마지막 항목 해소. **반자동** — 저장·주입은 자동, 요약은 사용자가 버튼으로 트리거.

### 구현
- 저장: `app-data.json`의 `memories: Record<employeeId, string>` (chatHistories 옆). `loadMemory`/`saveMemory` 5계층 배선. 해고 시 자동 삭제
- 주입: `ChatPopup.buildSystemPrompt(employee, memory)` — 기억이 있으면 `# 기억` 섹션 추가. 매 전송 직전 최신 기억을 디스크에서 fresh load (메모 모달 갱신 즉시 반영)
- 요약: 메모 모달 🧠 기억 섹션 — 최근 대화 40개 + 기존 기억을 *메모리 모델*로 3인칭 메모로 병합

### 사용 방법
1. 직원과 채팅 몇 번
2. 그 직원 메모지(📝) 열기 → "🧠 기억" 섹션
3. textarea에 직접 입력하거나 "🧠 대화에서 기억 정리" 클릭 → 메모리 모델이 요약 → textarea 갱신 + 저장
4. 이후 그 직원과 채팅 → 응답에 기억이 반영됨 (예: 이전에 말한 이름·취향 기억)

### 기대 동작 ☐
- [ ] 메모 모달에 "🧠 기억" 섹션 (textarea + "대화에서 기억 정리" 버튼)
- [ ] 채팅 후 "기억 정리" 클릭 → 메모리 모델이 요약 → textarea에 3인칭 메모 채워짐
- [ ] 대화 기록이 없을 때 "기억 정리" → "아직 대화 기록이 없어요" 안내 (덮어쓰기 X)
- [ ] 요약 결과가 비거나 "없음"류면 기존 기억 유지 + 안내 (덮어쓰기 X)
- [ ] 요약 진행 중 textarea·저장·취소·해고 버튼 비활성 (편집 유실·저장 경쟁 방지)
- [ ] textarea 직접 편집 후 "저장" → 기억 저장됨
- [ ] 기억 있는 직원과 채팅 → 응답이 기억을 자연스럽게 반영 (LLM 검증 필요)
- [ ] 앱 재시작 후에도 기억 유지 (영속화)
- [ ] 직원 해고 → 그 직원 기억 삭제 (다른 직원 영향 X)

### 알려진 한계
- 완전 자동·야간 압축 트리거 미구현 — 사용자 버튼 수동 트리거만 (B 반자동)
- 요약 품질은 메모리 모델 의존 — 긴 대화는 최근 40개만 요약 (토큰 한도)
- LLM 호출 검증 미수행 — Gemini 키 더미라 구조만 검증, 요약·주입 실동작은 사용자 dev 확인 필요
- `MemoryMode`(off/manual/ask/auto) 토글 UI는 남아있으나 현재 동작과 직접 연결 안 됨 (수동 버튼이 실질 트리거) — 추후 정리·연결 검토

---

## 첫 사용자 온보딩 (Day 14)

테스터 피드백 T1("최초에 기능이 너무 많아 보기 힘듦") 해소 — 첫 사용자가 압도되지 않게 단계별 안내 + 키 없이도 즉시 체험.

### 1. 튜토리얼 가이드 투어 (비서 안내 · 자동 연속 + 단독 트랙) — Day 14 §129 재설계

**무엇**: 비서 **문 비서**(🐙 문어)가 **존댓말**로 "사장님"을 안내하고 대상 UI를 노란 스팟라이트로 강조. 버튼 이름은 [대괄호] 표기.
- **최초/다시보기**(상단바 🎓): `FIRST_RUN_STEPS`(~47단계) — 환영 → API 키 게이트 → **채용(메리 고정)** → 대화 → 칭찬 → 우클릭 → **화면 이동(줌/패닝)** → [📝 직원 관리] → 메모 → [🛒 상점] → 상점 → [⚙ 설정] → 설정 → 끝. **한 흐름으로 자동 연속**(App의 zone orchestration이 단계 id에 맞춰 메모/상점/설정 모달을 자동 개폐).
- **단독**: 메모지/상점/설정 각 창 안 🎓 → 그 창만 설명(끝에 "닫기").

**사용 방법**:
- 상단바 **🎓** → 처음부터 전체 자동 연속 투어. 전환은 [📝 직원 관리 보기]/[🛒 상점 보기]/[⚙ 설정 보기] 버튼.
- 각 창 안 🎓 → 그 창 단독 안내.
- 각 단계: **◂ 이전 / 다음 ▸**, **건너뛰기**(전체 종료). 긴 흐름은 진행 막대(n/총).

**기대 동작 ☐**:
- [ ] 상단바 🎓 → 문 비서가 존댓말로 환영("사장님, 출근하셨습니까")
- [ ] 채용 단계: [+ 채용] 클릭 → 폼이 **메리로 고정 + 편집 잠금**(다른 칸 클릭 안 됨), 필드별 스팟라이트: 템플릿→팀→이름→역할→지침→외형/무늬→MBTI→초기직급→진급방식→대화모델
- [ ] MBTI [ⓘ] 누르면 16종 설명 — **이때 스팟라이트는 잠시 사라짐**(설명 창이 포커스 뒤에 가리지 않게). 감정 미리보기도 동일
- [ ] **✓ 채용 완료**: "다음" 없음 — 실제 버튼 눌러야 진행. 카드는 버튼 안 가리게 위로
- [ ] 채용 후 대화 → 칭찬 → 우클릭 → **화면 이동(🔎/휠/드래그)** 안내
- [ ] 자동 연속: [📝 직원 관리] → 메모지 자동 열림(정체성~🧠기억~해고) → [🛒 상점] → 상점 자동 열림 → [⚙ 설정] → 설정 → 끝(모달 자동 닫힘)
- [ ] 스팟라이트는 **스크롤이 끝난 뒤** 떠서 위아래로 깜빡이지 않음
- [ ] 각 창 안 🎓 → 그 창만 단독 안내(닫으면 종료)
- [ ] 기존 사용자도 자동 표시 안 됨 — 🎓로만

**알려진 한계**: 캔버스(사무실) 대상은 영역 하이라이트(정밀 캐릭터 추적 X). 자동 시작 없음(버튼 전용). 자동 연속 중 진행 모달을 임의로 닫아도 다시 열림(흐름 유지) — 종료는 건너뛰기로.

### 2. API 키 온보딩 (미니 팝업 + 받는 법 안내)

**무엇**: 설정창의 인라인 키 입력을 *별도 미니 팝업*으로 분리. "받는 방법"은 또 다른 안내 창.

**사용 방법**: ⚙ 설정 → "🔑 API 키 설정 열기" (또는 채용 모달 "키 설정", 튜토리얼 API 키 게이트) → `ApiKeyModal`(입력·저장) → "❓ 받는 방법" → `ApiKeyGuideModal`(Gemini 무료/Anthropic 유료 발급 절차 + 링크 → "키 입력하러 가기")

**기대 동작 ☐**:
- [ ] 설정 "🔑 API 키 설정 열기" → 미니 팝업 (Google/Anthropic 입력·저장·삭제, 저장됨 표시)
- [ ] 미니 팝업 "❓ 받는 방법" → 별도 안내창 (절차 + 발급 링크). 링크는 **기본 브라우저**로 열림
- [ ] 안내창 "✏️ 키 입력하러 가기" → 입력 팝업
- [ ] 키 저장 시 채용 모달·채팅창이 즉시 실제 모드로 갱신
- [ ] 위 모달 떠 있을 때 ESC가 아래 채용/설정 모달을 같이 닫지 않음(입력 보존)

### 3. 데모 대화 모드 (키 없이 체험)

**무엇**: API 키가 없어도 채용·대화 가능. 대화는 **캐릭터별 더미 응답**으로 동작 → 가치 체험 후 키로 유도.

**사용 방법**: 키 없이 채용 → 직원 더블클릭 → 대화하면 정해진 답변. 채팅창 배너 [🔑 키 연결]로 실제 모드 전환.

**기대 동작 ☐**:
- [ ] 키 없어도 채용됨 (모델 pill 활성, 막다른 알림 없음)
- [ ] 편집자(Mary)/작가(Haewol)/개발자(Cody) 각 페르소나에 맞는 더미 답변
- [ ] 새 직원(커스텀)은 "🔑 API 키 연결하면 ‘이름’에 맞게 진짜 대답" 유도
- [ ] 채팅창 위 "🔑 데모 응답…" 배너 + [🔑 키 연결] → 키 팝업
- [ ] 푸터가 데모 땐 "🔑 데모 모드 (비용 없음)", 키 있으면 "💬 실제 LLM과 대화 중"
- [ ] 데모도 칭찬·진급 카운트 (게임 루프 체험)
- [ ] 키 저장 즉시 같은 채팅창에서 실제 LLM 응답으로 전환

**알려진 한계**: 더미 답변은 캐릭터당 6종 고정 순환. 실제 페르소나·기억 반영은 키 연결 후.

---

## 🚀 배포 전 검증 (회사망 dev 영향 cleanup)

> Day 10 발견: 사용자 PC가 회사망에 있어 SSL inspection으로 Node fetch 차단. 임시 fix(`NODE_TLS_REJECT_UNAUTHORIZED=0`)는 dev 한정이지만 **배포 전 일반망 검증 필수**.
> 자세히는 [`ideas/18-corp-network-ssl-issue.md`](ideas/18-corp-network-ssl-issue.md)

### A. 일반망 dev 동작 검증
- [ ] **회사망 떠나기** — 집 Wi-Fi / 카페 / 모바일 핫스팟 등 회사망이 아닌 환경에서 PC 연결
- [ ] `pnpm dev` 실행 → Electron 창 정상 떠짐
- [ ] 채팅 메시지 보내기 (Gemini) → 정상 응답 도착 (`Gemini가 응답을 거부했어요` X)
- [ ] 채팅 메시지 보내기 (Claude) → 정상 응답
- [ ] main process 콘솔에 `[gemini] raw error`·`[anthropic] raw error` 없음
- ✅ 모두 통과 → dev 환경 자체는 회사망 의존성 없음 (`!app.isPackaged` 가드 OK)

### B. Production 빌드 검증
- [ ] `pnpm build` 또는 `electron-builder` 실행 → 빌드 성공
- [ ] 빌드된 `.exe` (또는 `.dmg` / `.AppImage`)를 **다른 PC**에 복사 → 실행 (회사 PC에서 다른 PC로 옮기든, 동료에게 줘서 실행)
- [ ] 빌드된 앱에서 API 키 입력 → 채팅 → 정상 응답
- ✅ 통과 → production은 SSL 정상 검증, 회사망 임시 fix 누출 없음

### C. 코드 cleanup
- [ ] `electron/main.ts` — `NODE_TLS_REJECT_UNAUTHORIZED=0`이 **`if (!app.isPackaged)` 블록 안**에 있는지 마지막 확인
- [x] `electron/llm/gemini.ts` — 진단 로그 5줄은 *유지* 결정 (Day 10). catch 블록 안이라 정상 시 출력 0. fetch·SSL·DNS·API 재발 시 첫 단서. 주석으로 용도 명시됨
- [ ] (선택) `NODE_EXTRA_CA_CERTS` 마이그레이션 — IT에서 회사 CA cert 받으면 `NODE_TLS_REJECT_UNAUTHORIZED` 대신 *회사 CA만 추가 신뢰*로 전환. 자세히는 [`ideas/18`](ideas/18-corp-network-ssl-issue.md) §5 옵션 A

### D. 같은 패턴 재발 방지
- 새 외부 API 도입 시 (예: OpenAI / 백엔드 프록시) **회사망에서 처음 시도하면 SSL inspection 가능성** 의심
- 진단 첫 명령 (PowerShell):
  ```powershell
  node -e "fetch('https://API_ENDPOINT').then(r => console.log(r.status)).catch(e => console.error(e.cause))"
  ```
- `cause.code === 'SELF_SIGNED_CERT_IN_CHAIN'` 또는 `'CERT_HAS_EXPIRED'` 나오면 회사망 SSL inspection 확정
